current state of i18n as exported by Transifex

--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_da.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_da.properties
@@ -1,206 +1,205 @@
-#X-Generator: crowdin.net
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd=Automatically detect language
+atd = Automatically detect language
 
-ast=Asturian
+ast = Asturian
 
-be=Hviderussisk
+be = Hviderussisk
 
 br = Breton
 
-ca=Catalansk
+ca = Catalansk
 
-category_case=STORE/sm\u00e5 bogstaver
+category_case = STORE/sm\u00e5 bogstaver
 
-category_false_friend=Falske venner
+category_false_friend = Falske venner
 
-category_grammar=Grammatik
+category_grammar = Grammatik
 
-category_misc=Diverse
+category_misc = Diverse
 
-category_typo=Mulig sl\u00e5fejl
+category_typo = Mulig sl\u00e5fejl
 
-checkDone=Kontrol gennemf\u00f8rt, {0} mulige problemer fundet
+checkDone = Kontrol gennemf\u00f8rt, {0} mulige problemer fundet
 
-checkText=&Kontrollere tekst
+checkText = &Kontrollere tekst
 
-correctionMessage=Korrektion\:
+correctionMessage = Korrektion\:
 
-cs=Tjekkisk
+cs = Tjekkisk
 
-da=Dansk
+da = Dansk
 
-de=Tysk
+de = Tysk
 
-desc_comma_whitespace=Mellemrum f\u00f8r komma og f\u00f8r/efter parenteser
+desc_comma_whitespace = Mellemrum f\u00f8r komma og f\u00f8r/efter parenteser
 
-desc_double_punct=To p\u00e5 hinanden f\u00f8lgende punktummer eller kommaer
+desc_double_punct = To p\u00e5 hinanden f\u00f8lgende punktummer eller kommaer
 
-desc_repetition=Ordgentagelse (f.eks. 'den den')
+desc_repetition = Ordgentagelse (f.eks. 'den den')
 
-desc_repetition_short=Ordgentagelse
+desc_repetition_short = Ordgentagelse
 
-desc_unpaired_brackets=Ikke parret parenteser, tuborgklammer, citationstegn og lignende symboler
+desc_unpaired_brackets = Ikke parret parenteser, tuborgklammer, citationstegn og lignende symboler
 
-desc_uppercase_sentence=Kontroller at s\u00e6tningen starter med et stort begyndelsesbogstav
+desc_uppercase_sentence = Kontroller at s\u00e6tningen starter med et stort begyndelsesbogstav
 
-desc_whitespacerepetition=Gentagende mellemrum (d\u00e5rlig formatering)
+desc_whitespacerepetition = Gentagende mellemrum (d\u00e5rlig formatering)
 
-double_dots_short=To p\u00e5 hinanden f\u00f8lgende punktummer
+double_dots_short = To p\u00e5 hinanden f\u00f8lgende punktummer
 
-double_commas_short=To p\u00e5 hinanden f\u00f8lgende kommaer
+double_commas_short = To p\u00e5 hinanden f\u00f8lgende kommaer
 
-en=Engelsk
+en = Engelsk
 
-enterText=Indtast eller inds\u00e6t teksten der skal kontrolleres i det \u00f8verste felt
+enterText = Indtast eller inds\u00e6t teksten der skal kontrolleres i det \u00f8verste felt
 
-enterText2=Inds\u00e6t teksten der skal kontrollers her
+enterText2 = Inds\u00e6t teksten der skal kontrollers her
 
-eo=Esperanto
+eo = Esperanto
 
-errorContext=Sammenh\u00e6ng\:
+errorContext = Sammenh\u00e6ng\:
 
-errorMessage=Meddelelse\:
+errorMessage = Meddelelse\:
 
-es=Spansk
+es = Spansk
 
-false_friend=Falske venner
+false_friend = Falske venner
 
-false_friend_desc=Tip om falske venner\:
+false_friend_desc = Tip om falske venner\:
 
-false_friend_hint=Tip\: "{0}" ({1}) betyder {2} ({3}).
+false_friend_hint = Tip\: "{0}" ({1}) betyder {2} ({3}).
 
-false_friend_suggestion=Mente du {0}?
+false_friend_suggestion = Mente du {0}?
 
-fr=Fransk
+fr = Fransk
 
-gl=Galicisk
+gl = Galicisk
 
 guiAddButton=Add...
-guiCancelButton=Annuller
+guiCancelButton = Annuller
 
-guiCheckComplete=LanguageTools kontrol er f\u00e6rdig.
+guiCheckComplete = LanguageTools kontrol er f\u00e6rdig.
 guiCloseButton=Close
 
-guiConfigWindowTitle=LanguageTool Indstillinger
+guiConfigWindowTitle = LanguageTool Indstillinger
 
-guiDemoText=Dette er et teksteksempel for at at vise hvordan LanguageTool virker. Bem\u00e6rk dog, at den ikke indeholder en stavekontrol.
+guiDemoText = Dette er et teksteksempel for at at vise hvordan LanguageTool virker. Bem\u00e6rk dog, at den ikke indeholder en stavekontrol.
 guiLanguageManagerDialog=Language Module Manager
 
-guiMatchCount=Mulig fejl\:
+guiMatchCount = Mulig fejl\:
 
-guiMenuAbout=&Om LanguageTool
+guiMenuAbout = &Om LanguageTool
 
-guiMenuAddRules=Hent &regelfil
+guiMenuAddRules = Hent &regelfil
 
-guiMenuCheckClipboard=&Kontroller tekst i klipholderen
+guiMenuCheckClipboard = &Kontroller tekst i klipholderen
 
-guiMenuFile=&Filer
+guiMenuFile = &Filer
 
-guiMenuHelp=&Hj\u00e6lp
+guiMenuHelp = &Hj\u00e6lp
 
-guiMenuHide=&Skjul til systembakken
+guiMenuHide = &Skjul til systembakken
 
-guiMenuOpen=&\u00c5ben...
+guiMenuOpen = &\u00c5ben...
 
-guiMenuOptions=&Indstillinger...
+guiMenuOptions = &Indstillinger...
 
-guiMenuQuit=&Afslut
+guiMenuQuit = &Afslut
 
-guiMenuShowMainWindow=\u00c5ben hovedvinduet
+guiMenuShowMainWindow = \u00c5ben hovedvinduet
 
-guiMotherTongue=Dit modersm\u00e5l\:
+guiMotherTongue = Dit modersm\u00e5l\:
 
-guiNoErrorsFound=Ingen fejl eller advarsler fundet (sprog\: {0})
+guiNoErrorsFound = Ingen fejl eller advarsler fundet (sprog\: {0})
 
-guiNoErrorsFoundSelectedText=Ingen fejl eller advarsler fundet i den markerede tekst (sprog\: {0})
+guiNoErrorsFoundSelectedText = Ingen fejl eller advarsler fundet i den markerede tekst (sprog\: {0})
 
-guiOKButton=&OK
+guiOKButton = &OK
 
-guiOOoChangeButton=&Change
+guiOOoChangeButton = &Change
 
-guiOOoCloseButton=&Luk
+guiOOoCloseButton = &Luk
 
-guiOOoIgnoreAllButton=I&gnorer alle
+guiOOoIgnoreAllButton = I&gnorer alle
 
-guiOOoIgnoreButton=&Ignorer her
+guiOOoIgnoreButton = &Ignorer her
 
-guiOOoOptionsButton=In&dstillinger...
+guiOOoOptionsButton = In&dstillinger...
 
-guiProgressWindowTitle=LanguageTool\: Kontrollere teks...
+guiProgressWindowTitle = LanguageTool\: Kontrollere teks...
 
 guiRemoveButton=Remove
-guiReplaceWindowTitle=Erstat tekst
+guiReplaceWindowTitle = Erstat tekst
 
-guiReplaceWithOtherText=<anden tekst>
+guiReplaceWithOtherText = <anden tekst>
 
-guiRunOnPort=K\u00f8r som service p\u00e5 po&rt
+guiRunOnPort = K\u00f8r som service p\u00e5 po&rt
 
-guiSelectionCheckComplete=LanguageTools kontrol af markerede tekst er f\u00e6rdig.
+guiSelectionCheckComplete = LanguageTools kontrol af markerede tekst er f\u00e6rdig.
 
-guiTagText=&Tag Text
+guiTagText = &Tag Text
 
-incorrect_case=Denne s\u00e6tning starter ikke med et stort begyndelsesbogstav
+incorrect_case = Denne s\u00e6tning starter ikke med et stort begyndelsesbogstav
 
-is=Islandsk
+is = Islandsk
 
-it=Italiensk
+it = Italiensk
 
-km=Khmer
+km = Khmer
 
-lt=Lettisk
+lt = Lettisk
 
-missing_space_after_comma=Inds\u00e6t et mellemrum efter kommaet
+missing_space_after_comma = Inds\u00e6t et mellemrum efter kommaet
 
-ml=Malayalam
+ml = Malayalam
 
-nl=Hollandsk
+nl = Hollandsk
 
-no_space_after=Inds\u00e6t ikke et mellemrum efter parentesbegynd
+no_space_after = Inds\u00e6t ikke et mellemrum efter parentesbegynd
 
-no_space_before=Inds\u00e6t ikke et mellemrum f\u00f8r parentesslut
+no_space_before = Inds\u00e6t ikke et mellemrum f\u00f8r parentesslut
 
-no_space_before_dot=Inds\u00e6t ikke et mellemrum f\u00f8r punktum
+no_space_before_dot = Inds\u00e6t ikke et mellemrum f\u00f8r punktum
 
-pl=Polsk
+pl = Polsk
 
-repetition=Mulig sl\u00e5fejl\: du har gentaget et ord
+repetition = Mulig sl\u00e5fejl\: du har gentaget et ord
 
-result1=<br><b> {0}. Linje {1}, kolonne {2}</b><br>
+result1 = <br><b> {0}. Linje {1}, kolonne {2}</b><br>
 
-resultAreaText=Resultater vil vise sig her
+resultAreaText = Resultater vil vise sig her
 
-resultTime=<br>Time\: {0}ms (including {1}ms for rule matching)<br>
+resultTime = <br>Time\: {0}ms (including {1}ms for rule matching)<br>
 
-ru=Russisk
+ru = Russisk
 
-sk=Slovakisk
+sk = Slovakisk
 
-sl=Slovensk
+sl = Slovensk
 
-space_after_comma=Inds\u00e6t et mellemrum efter kommaet, ikke f\u00f8r det.
+space_after_comma = Inds\u00e6t et mellemrum efter kommaet, ikke f\u00f8r det.
 
-startChecking=Starter kontrollen om {0}
+startChecking = Starter kontrollen om {0}
 
-sv=Svensk
+sv = Svensk
 
-tl=Tagalog
+tl = Tagalog
 
-textLanguage=Tekstens sprog\:
+textLanguage = Tekstens sprog\:
 
-two_commas=To p\u00e5 hinanden f\u00f8lgende kommaer
+two_commas = To p\u00e5 hinanden f\u00f8lgende kommaer
 
-two_dots=To p\u00e5 hinanden f\u00f8lgende punktummer
+two_dots = To p\u00e5 hinanden f\u00f8lgende punktummer
 
-uk=Ukrainsk
+uk = Ukrainsk
 
-unpaired_brackets=Ikke parret parenteser eller lignende symboler
+unpaired_brackets = Ikke parret parenteser eller lignende symboler
 
-whitespace_repetition=Mulig sl\u00e5fejl\: du har gentaget et mellemrum
+whitespace_repetition = Mulig sl\u00e5fejl\: du har gentaget et mellemrum
 
-ro=Rum\u00e6nsk
+ro = Rum\u00e6nsk
 
-zh=Chinese
+zh = Chinese
 
