--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_eo.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_eo.properties
@@ -1,24 +1,13 @@
-# Esperanto translation of LanguageTool
-# Copyright (C) 2010 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
-# 
-# Vim Command to run before editing (to see accentuated letters rather 
-# their code):
-# :v/^#/s:\\u0109:ĉ:gI |s:\\u0108:Ĉ:gI |s:\\u011d:ĝ:gI |s:\\u0135:ĵ:gI |s:\\u0125:ĥ:gI |s:\\u016d:ŭ:gI |s:\\u015c:Ŝ:gI
-#
-# Vim command to run before saving file:
-# :v/^#/s:ĉ:\\u0109:gI |s:Ĉ:\\u0108:gI |s:ĝ:\\u011d:gI |s:ĵ:\\u0135:gI |s:ĥ:\\u0125:gI |s:ŭ:\\u016d:gI |s:Ŝ:\\u015c:gI
-# 
-# Sendu komentojn aŭ korektojn al:
-# Send comments or corrections to: Dominique Pellé <dominique.pelle@gmail.com>
-#
-#
-atd = A\u016dtomate detekti la lingvon 
+# English translation of LanguageTool
+# Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
+
+atd = A\u016dtomate detekti la lingvon
 
 ast = Asturia
 
 be = Belorusa
 
-br = Breton
+br = Bretona
 
 ca = Kataluna
 
@@ -36,7 +25,7 @@ checkDone = Kontrolo farita, {0} eblaj problemoj trovitaj
 
 checkText = &Kontroli tekston
 
-correctionMessage = Korektado:
+correctionMessage = Korektado\:
 
 cs = \u0108e\u0125a
 
@@ -44,7 +33,7 @@ da = Dana
 
 de = Germana
 
-desc_comma_whitespace = Uzo de spaceton anta\u016d komo kaj anta\u016d/malanta\u016d krampoj
+desc_comma_whitespace = Uzo de spaceto anta\u016d komo kaj anta\u016d/malanta\u016d krampoj
 
 desc_double_punct = Uzo de sinsekvaj punktoj a\u016d komoj
 
@@ -70,17 +59,17 @@ enterText2 = Bonvolu enmeti la kontrolendajn tekstojn \u0109i tie
 
 eo = Esperanto
 
-errorContext = Kunteksto:
+errorContext = Kunteksto\:
 
-errorMessage = Mesa\u011do:
+errorMessage = Mesa\u011do\:
 
 es = Hispana
 
 false_friend = Falsaj amikoj
 
-false_friend_desc = konsilo de falsa amiko por:
+false_friend_desc = konsilo de falsa amiko por\:
 
-false_friend_hint = Konsilo: "{0}" ({1}) signifas {2} ({3}).
+false_friend_hint = Konsilo\: "{0}" ({1}) signifas {2} ({3}).
 
 false_friend_suggestion = \u0108u vi intencis {0}?
 
@@ -88,22 +77,18 @@ fr = Franca
 
 gl = Galega
 
-guiAddButton = Aldoni...
-
+guiAddButton=Aldoni...
 guiCancelButton = Rezigni
 
 guiCheckComplete = Kontrolado de Lingvoilo fini\u011dis.
-
-guiCloseButton = Malfermi
+guiCloseButton=Malfermi
 
 guiConfigWindowTitle = Opcioj de Lingvoilo
 
-# Errors are on purpose in this demo text.
 guiDemoText = \u0108i tiu ekzemplo estas ekzemplo por por montri kiel funkcias Lingvoilo. Rimarku, tamen, ke \u011di ne inkluzivas literumilon.
+guiLanguageManagerDialog=Administrilo de lingvaj moduloj
 
-guiLanguageManagerDialog = Administrilo de lingvaj moduloj
-
-guiMatchCount = Eblaj eraroj:
+guiMatchCount = Eblaj eraroj\:
 
 guiMenuAbout = &Pri...
 
@@ -115,7 +100,7 @@ guiMenuFile = &Dosiero
 
 guiMenuHelp = &Helpo
 
-guiMenuHide = K&aŝi en la taskopleto
+guiMenuHide = K&a\u015di en la taskopleto
 
 guiMenuOpen = &Malfermi...
 
@@ -125,11 +110,11 @@ guiMenuQuit = &Eliti
 
 guiMenuShowMainWindow = Malfermi la \u0109efan fenestron
 
-guiMotherTongue = Via denaska lingvo:
+guiMotherTongue = Via denaska lingvo\:
 
-guiNoErrorsFound = Neniuj eraroj a\u016d avertoj trovitaj (lingvo: {0})
+guiNoErrorsFound = Neniuj eraroj a\u016d avertoj trovitaj (lingvo\: {0})
 
-guiNoErrorsFoundSelectedText = Neniuj eraroj a\u016d avertoj trovitaj en la apartigita teksto (lingvo: {0})
+guiNoErrorsFoundSelectedText = Neniuj eraroj a\u016d avertoj trovitaj en la apartigita teksto (lingvo\: {0})
 
 guiOKButton = &Bone
 
@@ -143,10 +128,9 @@ guiOOoIgnoreButton = Ignori
 
 guiOOoOptionsButton = Opcioj...
 
-guiProgressWindowTitle = Lingvoilo: kontrolado de teksto...
+guiProgressWindowTitle = Lingvoilo\: kontrolado de teksto...
 
-guiRemoveButton = Forigi
-
+guiRemoveButton=Forigi
 guiReplaceWindowTitle = Anstata\u016digi tekston
 
 guiReplaceWithOtherText = <alia teksto>
@@ -169,7 +153,7 @@ lt = Litova
 
 missing_space_after_comma = Enmetu spaceton post la komo
 
-ml= Malajala
+ml = Malajala
 
 nl = Nederlanda
 
@@ -181,13 +165,13 @@ no_space_before_dot = Ne enmetu spaceton anta\u016d punkto
 
 pl = Pola
 
-repetition = Ebla mistajpa\u0135o: vi ripetis vorton
+repetition = Ebla mistajpa\u0135o\: vi ripetis vorton
 
 result1 = <br><b> {0}. Linio {1}, kolumno {2}</b><br>
 
 resultAreaText = Rezultoj aperos tie
 
-resultTime = <br>Daŭro: {0}ms (inkluzive {1}ms por rekono de reguloj)<br>
+resultTime = <br>Da\u016dro\: {0}ms (inkluzive {1}ms por rekono de reguloj)<br>
 
 ru = Rusa
 
@@ -203,7 +187,7 @@ sv = Sveda
 
 tl = Tagaloga
 
-textLanguage = Lingvo de teksto:
+textLanguage = Lingvo de teksto\:
 
 two_commas = Du sinsekvaj komoj
 
@@ -213,8 +197,9 @@ uk = Ukraina
 
 unpaired_brackets = Nekongruaj krampoj a\u016d similaj simbolo
 
-whitespace_repetition = Ebla mistajpa\u0135o: vi ripetis spaceton
+whitespace_repetition = Ebla mistajpa\u0135o\: vi ripetis spaceton
 
 ro = Rumana
 
 zh = \u0108ina
+
