--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_fr.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_fr.properties
@@ -1,206 +1,205 @@
-#X-Generator: crowdin.net
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd=Automatically detect language
+atd = Automatically detect language
 
-ast=Asturien
+ast = Asturien
 
-be=Bi\u00e9lorusse
+be = Bi\u00e9lorusse
 
 br = Breton
 
-ca=catalan
+ca = Catalan
 
-category_case=Majuscules
+category_case = Majuscules
 
-category_false_friend=Faux amis
+category_false_friend = Faux amis
 
-category_grammar=Grammaire
+category_grammar = Grammaire
 
-category_misc=R\u00e8gles de base
+category_misc = R\u00e8gles de base
 
-category_typo=Faute de frappe possible
+category_typo = Faute de frappe possible
 
-checkDone=V\u00e9rification termin\u00e9e. Nombre d'alertes \: {0}
+checkDone = V\u00e9rification termin\u00e9e. Nombre d'alertes \: {0}
 
-checkText=V\u00e9rifier le texte
+checkText = V\u00e9rifier le texte
 
-correctionMessage=Correction \:
+correctionMessage = Correction \:
 
-cs=tch\u00e8que
+cs = Tch\u00e8que
 
-da=danois
+da = Danois
 
-de=allemand
+de = Allemand
 
-desc_comma_whitespace=Espace devant \u00ab\u00a0,\u00a0\u00bb, \u00ab\u00a0)\u00a0\u00bb ou apr\u00e8s \u00ab\u00a0(\u00a0\u00bb
+desc_comma_whitespace = Espace devant \u00ab\u00a0,\u00a0\u00bb, \u00ab\u00a0)\u00a0\u00bb ou apr\u00e8s \u00ab\u00a0(\u00a0\u00bb
 
-desc_double_punct=Virgules ou points cons\u00e9cutifs
+desc_double_punct = Virgules ou points cons\u00e9cutifs
 
-desc_repetition=Doublon (\u00ab\u00a0pour pour\u00a0\u00bb, \u00ab\u00a0je je\u00a0\u00bb, etc.)
+desc_repetition = Doublon (\u00ab\u00a0pour pour\u00a0\u00bb, \u00ab\u00a0je je\u00a0\u00bb, etc.)
 
-desc_repetition_short=Doublon
+desc_repetition_short = Doublon
 
-desc_unpaired_brackets=Guillemet fermant ou ouvrant manquant
+desc_unpaired_brackets = Guillemet fermant ou ouvrant manquant
 
-desc_uppercase_sentence=Majuscule en d\u00e9but de phrase
+desc_uppercase_sentence = Majuscule en d\u00e9but de phrase
 
-desc_whitespacerepetition=Plusieurs espaces blanches (mauvais format)
+desc_whitespacerepetition = Plusieurs espaces blanches (mauvais format)
 
-double_dots_short=Points cons\u00e9cutifs
+double_dots_short = Points cons\u00e9cutifs
 
-double_commas_short=Virgules cons\u00e9cutifs
+double_commas_short = Virgules cons\u00e9cutifs
 
-en=anglais
+en = Anglais
 
-enterText=Ins\u00e9rez le texte \u00e0 v\u00e9rifier dans l'espace du haut
+enterText = Ins\u00e9rez le texte \u00e0 v\u00e9rifier dans l'espace du haut
 
-enterText2=Placez le texte \u00e0 v\u00e9rifier ici
+enterText2 = Placez le texte \u00e0 v\u00e9rifier ici
 
-eo=Esp\u00e9ranto
+eo = Esp\u00e9ranto
 
-errorContext=Contexte \:
+errorContext = Contexte \:
 
-errorMessage=Message \:
+errorMessage = Message \:
 
-es=espagnol
+es = Espagnol
 
-false_friend=Faux ami
+false_friend = Faux ami
 
-false_friend_desc=note concernant les faux-amis \:
+false_friend_desc = note concernant les faux-amis \:
 
-false_friend_hint=Note \: "{0}" ({1}) signifie {2} ({3}).
+false_friend_hint = Note \: "{0}" ({1}) signifie {2} ({3}).
 
-false_friend_suggestion=Voulez-vous dire {0} ?
+false_friend_suggestion = Voulez-vous dire {0} ?
 
-fr=fran\u00e7ais
+fr = Fran\u00e7ais
 
-gl=galicien
+gl = Galicien
 
 guiAddButton=Add...
-guiCancelButton=Annuler
+guiCancelButton = Annuler
 
-guiCheckComplete=La v\u00e9rification de LanguageTool est termin\u00e9e.
+guiCheckComplete = La v\u00e9rification de LanguageTool est termin\u00e9e.
 guiCloseButton=Close
 
-guiConfigWindowTitle=Options de LanguageTool
+guiConfigWindowTitle = Options de LanguageTool
 
-guiDemoText=Se texte est un exemple pour pour vous montrer le fonctionnement de LanguageTool. notez que LanguageTool ne comporte pas de correcteur orthographique.
+guiDemoText = Se texte est un exemple pour pour vous montrer le fonctionnement de LanguageTool. notez que LanguageTool ne comporte pas de correcteur orthographique.
 guiLanguageManagerDialog=Language Module Manager
 
-guiMatchCount=Erreurs possibles \:
+guiMatchCount = Erreurs possibles \:
 
-guiMenuAbout=\u00c0 propos...
+guiMenuAbout = \u00c0 propos...
 
-guiMenuAddRules=Charger un fichier de r\u00e8gles
+guiMenuAddRules = Charger un fichier de r\u00e8gles
 
-guiMenuCheckClipboard=V\u00e9rifier le texte dans le presse-papiers
+guiMenuCheckClipboard = V\u00e9rifier le texte dans le presse-papiers
 
-guiMenuFile=Fichier
+guiMenuFile = Fichier
 
-guiMenuHelp=Aide
+guiMenuHelp = Aide
 
-guiMenuHide=R\u00e9duire dans la barre des t\u00e2ches
+guiMenuHide = R\u00e9duire dans la barre des t\u00e2ches
 
-guiMenuOpen=Ouvrir...
+guiMenuOpen = Ouvrir...
 
-guiMenuOptions=Options...
+guiMenuOptions = Options...
 
-guiMenuQuit=&Quitter
+guiMenuQuit = &Quitter
 
-guiMenuShowMainWindow=Ouvrir la fen\u00eatre principale
+guiMenuShowMainWindow = Ouvrir la fen\u00eatre principale
 
-guiMotherTongue=Langue maternelle \:
+guiMotherTongue = Langue maternelle \:
 
-guiNoErrorsFound=Ni alerte ni erreur n'ont \u00e9t\u00e9 trouv\u00e9es (language\: {0})
+guiNoErrorsFound = Ni alerte ni erreur n'ont \u00e9t\u00e9 trouv\u00e9es (language\: {0})
 
-guiNoErrorsFoundSelectedText=Ni alerte ni erreur n'ont \u00e9t\u00e9 trouv\u00e9es pour le texte s\u00e9lectionn\u00e9 (language\: {0})
+guiNoErrorsFoundSelectedText = Ni alerte ni erreur n'ont \u00e9t\u00e9 trouv\u00e9es pour le texte s\u00e9lectionn\u00e9 (language\: {0})
 
-guiOKButton=&OK
+guiOKButton = &OK
 
-guiOOoChangeButton=Changer
+guiOOoChangeButton = Changer
 
-guiOOoCloseButton=Fermer
+guiOOoCloseButton = Fermer
 
-guiOOoIgnoreAllButton=Ignorer tout
+guiOOoIgnoreAllButton = Ignorer tout
 
-guiOOoIgnoreButton=Ignorer
+guiOOoIgnoreButton = Ignorer
 
-guiOOoOptionsButton=Options...
+guiOOoOptionsButton = Options...
 
-guiProgressWindowTitle=LanguageTool \: V\u00e9rification en cours...
+guiProgressWindowTitle = LanguageTool \: V\u00e9rification en cours...
 
 guiRemoveButton=Remove
-guiReplaceWindowTitle=Remplacer le texte
+guiReplaceWindowTitle = Remplacer le texte
 
-guiReplaceWithOtherText=<other text>
+guiReplaceWithOtherText = <other text>
 
-guiRunOnPort=Ex\u00e9cuter en tant que serveur sur le port
+guiRunOnPort = Ex\u00e9cuter en tant que serveur sur le port
 
-guiSelectionCheckComplete=La v\u00e9rification de LanguageTool pour le texte s\u00e9lectionn\u00e9 est termin\u00e9e.
+guiSelectionCheckComplete = La v\u00e9rification de LanguageTool pour le texte s\u00e9lectionn\u00e9 est termin\u00e9e.
 
-guiTagText=&Tag Text
+guiTagText = &Tag Text
 
-incorrect_case=Cette phrase ne commence pas par une majuscule
+incorrect_case = Cette phrase ne commence pas par une majuscule
 
-is=islandais
+is = Islandais
 
-it=italien
+it = Italien
 
-km=khmer
+km = Khmer
 
-lt=lituanien
+lt = Lituanien
 
-missing_space_after_comma=Cr\u00e9ez une espace apr\u00e8s la virgule
+missing_space_after_comma = Cr\u00e9ez une espace apr\u00e8s la virgule
 
-ml=malayalam
+ml = Malayalam
 
-nl=n\u00e9erlandais
+nl = N\u00e9erlandais
 
-no_space_after=Ne placez pas d'espace apr\u00e8s une parenth\u00e8se ouvrante
+no_space_after = Ne placez pas d'espace apr\u00e8s une parenth\u00e8se ouvrante
 
-no_space_before=Ne placez pas d'espace avant une parenth\u00e8se fermante
+no_space_before = Ne placez pas d'espace avant une parenth\u00e8se fermante
 
-no_space_before_dot=Ne placez pas d'espace avant le point
+no_space_before_dot = Ne placez pas d'espace avant le point
 
-pl=polonais
+pl = Polonais
 
-repetition=Faute de frappe possible \: un mot est r\u00e9p\u00e9t\u00e9
+repetition = Faute de frappe possible \: un mot est r\u00e9p\u00e9t\u00e9
 
-result1=<br><b>{0}. Ligne {1}, colonne {2}</b><br>
+result1 = <br><b>{0}. Ligne {1}, colonne {2}</b><br>
 
-resultAreaText=Les r\u00e9sultats se trouveront ici.
+resultAreaText = Les r\u00e9sultats se trouveront ici.
 
-resultTime=<br>Dur\u00e9e\: {0}ms (y compris {1}ms les v\u00e9rifier les r\u00e8gles)<br>
+resultTime = <br>Dur\u00e9e\: {0}ms (y compris {1}ms les v\u00e9rifier les r\u00e8gles)<br>
 
-ru=russe
+ru = Russe
 
-sk=slovaque
+sk = Slovaque
 
-sl=slov\u00e9nien
+sl = Slov\u00e9nien
 
-space_after_comma=Placer l'espace apr\u00e8s la virgule et non avant
+space_after_comma = Placer l'espace apr\u00e8s la virgule et non avant
 
-startChecking=Commencement de la v\u00e9rification en {0}
+startChecking = Commencement de la v\u00e9rification en {0}
 
-sv=su\u00e9dois
+sv = Su\u00e9dois
 
-tl=Tagalog
+tl = Tagalog
 
-textLanguage=Langue du texte \:
+textLanguage = Langue du texte \:
 
-two_commas=Deux virgules cons\u00e9cutives
+two_commas = Deux virgules cons\u00e9cutives
 
-two_dots=Deux points cons\u00e9cutifs
+two_dots = Deux points cons\u00e9cutifs
 
-uk=ukrainien
+uk = Ukrainien
 
-unpaired_brackets=Il manque une parenth\u00e8se fermante ou ouvrante, un guillemet fermant ou ouvrant, etc.
+unpaired_brackets = Il manque une parenth\u00e8se fermante ou ouvrante, un guillemet fermant ou ouvrant, etc.
 
-whitespace_repetition=Faute de frappe possible \: vous avez r\u00e9p\u00e9t\u00e9 une espace
+whitespace_repetition = Faute de frappe possible \: vous avez r\u00e9p\u00e9t\u00e9 une espace
 
-ro=roumain
+ro = Roumain
 
-zh=Chinese
+zh = Chinois
 
