--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_nl.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_nl.properties
@@ -1,206 +1,205 @@
-#X-Generator: crowdin.net
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd=Automatically detect language
+atd = Bepaal taal automatisch
 
-ast=Asturiaans
+ast = Asturiaans
 
-be=Witrussisch
+be = Witrussisch
 
-br = Breton
+br = Bretons
 
-ca=Catalaans
+ca = Catalaans
 
-category_case=Hoofdlettergebruik
+category_case = Hoofdlettergebruik
 
-category_false_friend=Begripsverwarring
+category_false_friend = Begripsverwarring
 
-category_grammar=Grammatica
+category_grammar = Grammatica
 
-category_misc=Diversen
+category_misc = Diversen
 
-category_typo=Mogelijke typefouten
+category_typo = Mogelijke typefouten
 
-checkDone=Klaar, {0} aandachtspunten
+checkDone = Klaar, {0} aandachtspunten
 
-checkText=Tekst controleren
+checkText = Tekst controleren
 
-correctionMessage=Suggestie\:
+correctionMessage = Suggestie\:
 
-cs=Tsjechisch
+cs = Tsjechisch
 
-da=Deens
+da = Deens
 
-de=Duits
+de = Duits
 
-desc_comma_whitespace=Spatie voor of achter haakje
+desc_comma_whitespace = Spatie voor of achter haakje
 
-desc_double_punct=Twee komma's of punten
+desc_double_punct = Twee komma's of punten
 
-desc_repetition=Herhaling (bijv. 'de de')
+desc_repetition = Herhaling (bijv. 'de de')
 
-desc_repetition_short=Herhaling
+desc_repetition_short = Herhaling
 
-desc_unpaired_brackets=Onjuist gecombineerde leestekens
+desc_unpaired_brackets = Onjuist gecombineerde leestekens
 
-desc_uppercase_sentence=Controleert of een zin begint met een hoofdletter
+desc_uppercase_sentence = Controleert of een zin begint met een hoofdletter
 
-desc_whitespacerepetition=Te veel witruimte tussen woorden
+desc_whitespacerepetition = Te veel witruimte tussen woorden
 
-double_dots_short=Te veel punten
+double_dots_short = Te veel punten
 
-double_commas_short=Te veel komma's
+double_commas_short = Te veel komma's
 
-en=Engels
+en = Engels
 
-enterText=Voer in het bovenste vak de te controleren tekst in
+enterText = Voer in het bovenste vak de te controleren tekst in
 
-enterText2=Voer hier de te controleren tekst in
+enterText2 = Voer hier de te controleren tekst in
 
-eo=Esperanto
+eo = Esperanto
 
-errorContext=Context\:
+errorContext = Context\:
 
-errorMessage=Melding\:
+errorMessage = Melding\:
 
-es=Spaans
+es = Spaans
 
-false_friend=Betekenisverwarring
+false_friend = Betekenisverwarring
 
-false_friend_desc=Hint bij mogelijke verwisseling van begrippen\:
+false_friend_desc = Hint bij mogelijke verwisseling van begrippen\:
 
-false_friend_hint=Hint\: "{0}" ({1}) betekent {2} ({3}).
+false_friend_hint = Hint\: "{0}" ({1}) betekent {2} ({3}).
 
-false_friend_suggestion=Bedoelde u {0}?
+false_friend_suggestion = Bedoelde u {0}?
 
-fr=Frans
+fr = Frans
 
-gl=Galicisch
+gl = Galicisch
 
 guiAddButton=Voeg toe...
-guiCancelButton=Annuleren
+guiCancelButton = Annuleren
 
-guiCheckComplete=LanguageTool-controle gereed.
+guiCheckComplete = LanguageTool-controle gereed.
 guiCloseButton=Sluit
 
-guiConfigWindowTitle=LanguageTool-opties
+guiConfigWindowTitle = LanguageTool-opties
 
-guiDemoText=Dit is een voorbeeld om te laten zien hoe Languagetool werkt. Besef wel dat het geen spellingcontrole bevat.
+guiDemoText = Dit is een voorbeeld om te laten zien hoe LanguageTool werkt. Besef wel dat het geen spellingcontrole bevat.
 guiLanguageManagerDialog=Taalmodulebeheer
 
-guiMatchCount=Aandachtspunten\:
+guiMatchCount = Aandachtspunten\:
 
-guiMenuAbout=Over...
+guiMenuAbout = Over...
 
-guiMenuAddRules=Inlezen regelbestand
+guiMenuAddRules = Inlezen regelbestand
 
-guiMenuCheckClipboard=Tekst van klembord controleren
+guiMenuCheckClipboard = Tekst van klembord controleren
 
-guiMenuFile=Bestand
+guiMenuFile = Bestand
 
-guiMenuHelp=Hulp
+guiMenuHelp = Hulp
 
-guiMenuHide=Naar systeemvak
+guiMenuHide = Naar systeemvak
 
-guiMenuOpen=Openen...
+guiMenuOpen = Openen...
 
-guiMenuOptions=Opties...
+guiMenuOptions = Opties...
 
-guiMenuQuit=Afsluiten
+guiMenuQuit = Afsluiten
 
-guiMenuShowMainWindow=Open hoofdvenster
+guiMenuShowMainWindow = Open hoofdvenster
 
-guiMotherTongue=Moedertaal\:
+guiMotherTongue = Moedertaal\:
 
-guiNoErrorsFound=Geen aandachtspunten gevonden (taal\: {0})
+guiNoErrorsFound = Geen aandachtspunten gevonden (taal\: {0})
 
-guiNoErrorsFoundSelectedText=Geen aandachtspunten in de geselecteerde tekst(taal\: {0})
+guiNoErrorsFoundSelectedText = Geen aandachtspunten in de geselecteerde tekst(taal\: {0})
 
-guiOKButton=&Ok\u00e9
+guiOKButton = &Ok\u00e9
 
-guiOOoChangeButton=Wijzigen
+guiOOoChangeButton = Wijzigen
 
-guiOOoCloseButton=Sluiten
+guiOOoCloseButton = Sluiten
 
-guiOOoIgnoreAllButton=Alles negeren
+guiOOoIgnoreAllButton = Alles negeren
 
-guiOOoIgnoreButton=Negeer
+guiOOoIgnoreButton = Negeer
 
-guiOOoOptionsButton=Opties...
+guiOOoOptionsButton = Opties...
 
-guiProgressWindowTitle=LanguageTool\: Tekst controleren...
+guiProgressWindowTitle = LanguageTool\: Tekst controleren...
 
 guiRemoveButton=Verwijder
-guiReplaceWindowTitle=Tekst vervangen
+guiReplaceWindowTitle = Tekst vervangen
 
-guiReplaceWithOtherText=<nieuwe tekst>
+guiReplaceWithOtherText = <nieuwe tekst>
 
-guiRunOnPort=Voer uit als server op poort
+guiRunOnPort = Voer uit als server op poort
 
-guiSelectionCheckComplete=LanguageTool\: controle van geselecteerde tekst gereed.
+guiSelectionCheckComplete = LanguageTool\: controle van geselecteerde tekst gereed.
 
-guiTagText=&Details
+guiTagText = &Details
 
-incorrect_case=Deze zin begint niet met een hoofdletter
+incorrect_case = Deze zin begint niet met een hoofdletter
 
-is=IJslands
+is = IJslands
 
-it=Italiaans
+it = Italiaans
 
-km=Khmer
+km = Khmer
 
-lt=Litouws
+lt = Litouws
 
-missing_space_after_comma=Zet een spatie na de komma
+missing_space_after_comma = Zet een spatie na de komma
 
-ml=Maleis
+ml = Maleis
 
-nl=Nederlands
+nl = Nederlands
 
-no_space_after=Zet geen spatie na een haakje openen
+no_space_after = Zet geen spatie na een haakje openen
 
-no_space_before=Zet geen spatie voor een haakje sluiten
+no_space_before = Zet geen spatie voor een haakje sluiten
 
-no_space_before_dot=Zet geen spatie voor een punt
+no_space_before_dot = Zet geen spatie voor een punt
 
-pl=Pools
+pl = Pools
 
-repetition=Mogelijke typefout\: herhaling van woord
+repetition = Mogelijke typefout\: herhaling van woord
 
-result1=<br><b> {0}. Regel {1}, kolom {2}</b><br>
+result1 = <br><b> {0}. Regel {1}, kolom {2}</b><br>
 
-resultAreaText=Resultaten verschijnen hier. Suggesties voor (verbeteringen van) Nederlandse regels kunt u inbrengen via\: www.opentaal.org en opentaal@lists.sf.own-it.nl.
+resultAreaText = Resultaten verschijnen hier. Suggesties voor (verbeteringen van) Nederlandse regels kunt u inbrengen via\: www.opentaal.org en opentaal@lists.sf.own-it.nl.
 
-resultTime=<br>Tijd\: {0} ms (inclusief {1} ms voor toepassen regels)<br>
+resultTime = <br>Tijd\: {0} ms (inclusief {1} ms voor toepassen regels)<br>
 
-ru=Russisch
+ru = Russisch
 
-sk=Slovaaks
+sk = Slovaaks
 
-sl=Sloveens
+sl = Sloveens
 
-space_after_comma=Zet een spatie na een komma, maar niet ervoor
+space_after_comma = Zet een spatie na een komma, maar niet ervoor
 
-startChecking=Start controle in {0}
+startChecking = Start controle in {0}
 
-sv=Zweeds
+sv = Zweeds
 
-tl=Filipijns
+tl = Filipijns
 
-textLanguage=Teksttaal\:
+textLanguage = Teksttaal\:
 
-two_commas=Twee opeenvolgende komma's
+two_commas = Twee opeenvolgende komma's
 
-two_dots=Twee opeenvolgende punten
+two_dots = Twee opeenvolgende punten
 
-uk=Oekra\u00efens
+uk = Oekra\u00efens
 
-unpaired_brackets=Oneven aantal teksthaken
+unpaired_brackets = Oneven aantal teksthaken
 
-whitespace_repetition=Teveel witruimte
+whitespace_repetition = Teveel witruimte
 
-ro=Roemeens
+ro = Roemeens
 
-zh=Chinees
+zh = Chinees
 
