--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_pl.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_pl.properties
@@ -1,206 +1,205 @@
-#X-Generator: crowdin.net
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd=Automatyczne wykrywanie j\u0119zyka
+atd = Automatyczne wykrywanie j\u0119zyka
 
-ast=asturyjski
+ast = asturyjski
 
-be=bia\u0142oruski
+be = bia\u0142oruski
 
 br = Breton
 
-ca=katalo\u0144ski
+ca = katalo\u0144ski
 
-category_case=Pisownia ma\u0142\u0105 i wielk\u0105 liter\u0105
+category_case = Pisownia ma\u0142\u0105 i wielk\u0105 liter\u0105
 
-category_false_friend=Fa\u0142szywi przyjaciele
+category_false_friend = Fa\u0142szywi przyjaciele
 
-category_grammar=Gramatyka
+category_grammar = Gramatyka
 
-category_misc=B\u0142\u0119dy r\u00f3\u017cne
+category_misc = B\u0142\u0119dy r\u00f3\u017cne
 
-category_typo=Prawdopodobna liter\u00f3wka
+category_typo = Prawdopodobna liter\u00f3wka
 
-checkDone=Sprawdzono, liczba znalezionych potencjalnych problem\u00f3w\: {0}
+checkDone = Sprawdzono, liczba znalezionych potencjalnych problem\u00f3w\: {0}
 
-checkText=&Sprawd\u017a tekst
+checkText = &Sprawd\u017a tekst
 
-correctionMessage=Proponowana poprawka\:
+correctionMessage = Proponowana poprawka\:
 
-cs=czeski
+cs = czeski
 
-da=du\u0144ski
+da = du\u0144ski
 
-de=niemiecki
+de = niemiecki
 
-desc_comma_whitespace=Odst\u0119py przed przecinkami oraz przed nawiasami i po nawiasach
+desc_comma_whitespace = Odst\u0119py przed przecinkami oraz przed nawiasami i po nawiasach
 
-desc_double_punct=Podw\u00f3jne kropki lub przecinki
+desc_double_punct = Podw\u00f3jne kropki lub przecinki
 
-desc_repetition=Powt\u00f3rzenie wyrazu (np. \u201ejest jest\u201d)
+desc_repetition = Powt\u00f3rzenie wyrazu (np. \u201ejest jest\u201d)
 
-desc_repetition_short=Powt\u00f3rzenie wyrazu
+desc_repetition_short = Powt\u00f3rzenie wyrazu
 
-desc_unpaired_brackets=Niesparowane nawiasy i cudzys\u0142owy
+desc_unpaired_brackets = Niesparowane nawiasy i cudzys\u0142owy
 
-desc_uppercase_sentence=Test, czy zdanie zaczyna si\u0119 wielk\u0105 liter\u0105
+desc_uppercase_sentence = Test, czy zdanie zaczyna si\u0119 wielk\u0105 liter\u0105
 
-desc_whitespacerepetition=Powt\u00f3rzenie spacji (b\u0142\u0119dne formatowanie)
+desc_whitespacerepetition = Powt\u00f3rzenie spacji (b\u0142\u0119dne formatowanie)
 
-double_dots_short=Dwie kropki
+double_dots_short = Dwie kropki
 
-double_commas_short=Dwa przecinki
+double_commas_short = Dwa przecinki
 
-en=angielski
+en = angielski
 
-enterText=Wpisz lub wklej tekst do sprawdzenia w g\u00f3rnym polu
+enterText = Wpisz lub wklej tekst do sprawdzenia w g\u00f3rnym polu
 
-enterText2=Wstaw tutaj tekst do sprawdzenia
+enterText2 = Wstaw tutaj tekst do sprawdzenia
 
-eo=esperanto
+eo = esperanto
 
-errorContext=Kontekst\:
+errorContext = Kontekst\:
 
-errorMessage=Komunikat\:
+errorMessage = Komunikat\:
 
-es=hiszpa\u0144ski
+es = hiszpa\u0144ski
 
-false_friend=Wyraz zdradliwy
+false_friend = Wyraz zdradliwy
 
-false_friend_desc=wskaz\u00f3wka dotycz\u0105ca wyrazu zdradliwego\:
+false_friend_desc = wskaz\u00f3wka dotycz\u0105ca wyrazu zdradliwego\:
 
-false_friend_hint=Wskaz\u00f3wka\: "{0}" ({1}) oznacza {2} ({3})
+false_friend_hint = Wskaz\u00f3wka\: "{0}" ({1}) oznacza {2} ({3})
 
-false_friend_suggestion=Czy chodzi o {0}?
+false_friend_suggestion = Czy chodzi o {0}?
 
-fr=francuski
+fr = francuski
 
-gl=galisyjski
+gl = galisyjski
 
 guiAddButton=Dodaj...
-guiCancelButton=Anuluj
+guiCancelButton = Anuluj
 
-guiCheckComplete=Program LanguageTool zako\u0144czy\u0142 sprawdzanie.
+guiCheckComplete = Program LanguageTool zako\u0144czy\u0142 sprawdzanie.
 guiCloseButton=Zamknij
 
-guiConfigWindowTitle=Opcje LanguageTool
+guiConfigWindowTitle = Opcje LanguageTool
 
-guiDemoText=To jest przyk\u0142adowy tekst kt\u00f3ry pokazuje, jak jak dzia\u0142a LanguageTool. LanguageTool nie zawiera jadnak korektora psowni.
+guiDemoText = To jest przyk\u0142adowy tekst kt\u00f3ry pokazuje, jak jak dzia\u0142a LanguageTool. LanguageTool nie zawiera jadnak korektora psowni.
 guiLanguageManagerDialog=Mened\u017cer modu\u0142\u00f3w j\u0119zykowych
 
-guiMatchCount=Potencjalne b\u0142\u0119dy\:
+guiMatchCount = Potencjalne b\u0142\u0119dy\:
 
-guiMenuAbout=&Informacje...
+guiMenuAbout = &Informacje...
 
-guiMenuAddRules=Otw\u00f3rz plik &regu\u0142
+guiMenuAddRules = Otw\u00f3rz plik &regu\u0142
 
-guiMenuCheckClipboard=Sprawd\u017a &tekst ze schowka
+guiMenuCheckClipboard = Sprawd\u017a &tekst ze schowka
 
-guiMenuFile=&Plik
+guiMenuFile = &Plik
 
-guiMenuHelp=Pomo&c
+guiMenuHelp = Pomo&c
 
-guiMenuHide=Schowaj do paska &zada\u0144
+guiMenuHide = Schowaj do paska &zada\u0144
 
-guiMenuOpen=&Otw\u00f3rz...
+guiMenuOpen = &Otw\u00f3rz...
 
-guiMenuOptions=&Opcje...
+guiMenuOptions = &Opcje...
 
-guiMenuQuit=Za&ko\u0144cz
+guiMenuQuit = Za&ko\u0144cz
 
-guiMenuShowMainWindow=Otw\u00f3rz g\u0142\u00f3wne okno
+guiMenuShowMainWindow = Otw\u00f3rz g\u0142\u00f3wne okno
 
-guiMotherTongue=J\u0119zyk ojczysty\:
+guiMotherTongue = J\u0119zyk ojczysty\:
 
-guiNoErrorsFound=Nie znaleziono b\u0142\u0119d\u00f3w ani usterek (j\u0119zyk\: {0})
+guiNoErrorsFound = Nie znaleziono b\u0142\u0119d\u00f3w ani usterek (j\u0119zyk\: {0})
 
-guiNoErrorsFoundSelectedText=W zaznaczonym tek\u015bcie nie znaleziono b\u0142\u0119d\u00f3w ani usterek (j\u0119zyk\: {0})
+guiNoErrorsFoundSelectedText = W zaznaczonym tek\u015bcie nie znaleziono b\u0142\u0119d\u00f3w ani usterek (j\u0119zyk\: {0})
 
-guiOKButton=&OK
+guiOKButton = &OK
 
-guiOOoChangeButton=&Zmie\u0144
+guiOOoChangeButton = &Zmie\u0144
 
-guiOOoCloseButton=Zamknij
+guiOOoCloseButton = Zamknij
 
-guiOOoIgnoreAllButton=Ignoruj wszystkie
+guiOOoIgnoreAllButton = Ignoruj wszystkie
 
-guiOOoIgnoreButton=Ignoruj
+guiOOoIgnoreButton = Ignoruj
 
-guiOOoOptionsButton=&Opcje...
+guiOOoOptionsButton = &Opcje...
 
-guiProgressWindowTitle=LanguageTool\: Sprawdzanie tekstu...
+guiProgressWindowTitle = LanguageTool\: Sprawdzanie tekstu...
 
 guiRemoveButton=Usu\u0144
-guiReplaceWindowTitle=Zast\u0105p tekst
+guiReplaceWindowTitle = Zast\u0105p tekst
 
-guiReplaceWithOtherText=<inny tekst>
+guiReplaceWithOtherText = <inny tekst>
 
-guiRunOnPort=Uruchom jako serwer na po&rcie
+guiRunOnPort = Uruchom jako serwer na po&rcie
 
-guiSelectionCheckComplete=Sprawdzanie zaznaczonego tekstu w programie LanguageTool zosta\u0142o zako\u0144czone.
+guiSelectionCheckComplete = Sprawdzanie zaznaczonego tekstu w programie LanguageTool zosta\u0142o zako\u0144czone.
 
-guiTagText=Poka\u017c znaczniki w tek\u015bcie
+guiTagText = Poka\u017c znaczniki w tek\u015bcie
 
-incorrect_case=To zdanie nie zaczyna si\u0119 wielk\u0105 liter\u0105
+incorrect_case = To zdanie nie zaczyna si\u0119 wielk\u0105 liter\u0105
 
-is=islandzki
+is = islandzki
 
-it=w\u0142oski
+it = w\u0142oski
 
-km=khmerski
+km = khmerski
 
-lt=litewski
+lt = litewski
 
-missing_space_after_comma=Po przecinku wstawiamy spacj\u0119
+missing_space_after_comma = Po przecinku wstawiamy spacj\u0119
 
-ml=malayalam
+ml = malayalam
 
-nl=niderlandzki
+nl = niderlandzki
 
-no_space_after=Nie wstawiamy spacji po nawiasie otwieraj\u0105cym
+no_space_after = Nie wstawiamy spacji po nawiasie otwieraj\u0105cym
 
-no_space_before=Nie wstawiamy spacji przed nawiasem zamykaj\u0105cym
+no_space_before = Nie wstawiamy spacji przed nawiasem zamykaj\u0105cym
 
-no_space_before_dot=Nie wstawiamy spacji przed kropk\u0105
+no_space_before_dot = Nie wstawiamy spacji przed kropk\u0105
 
-pl=polski
+pl = polski
 
-repetition=Prawdopodobna liter\u00f3wka\: powt\u00f3rzony wyraz
+repetition = Prawdopodobna liter\u00f3wka\: powt\u00f3rzony wyraz
 
-result1=<br><b> {0}. Wiersz {1}, kolumna {2}</b><br>
+result1 = <br><b> {0}. Wiersz {1}, kolumna {2}</b><br>
 
-resultAreaText=Miejsce na wyniki
+resultAreaText = Miejsce na wyniki
 
-resultTime=<br>Czas\: {0}ms (w tym {1}ms dopasowywanie regu\u0142)<br>
+resultTime = <br>Czas\: {0}ms (w tym {1}ms dopasowywanie regu\u0142)<br>
 
-ru=rosyjski
+ru = rosyjski
 
-sk=s\u0142owacki
+sk = s\u0142owacki
 
-sl=s\u0142owe\u0144ski
+sl = s\u0142owe\u0144ski
 
-space_after_comma=Spacj\u0119 wstawiamy po przecinku, nie przed przecinkiem
+space_after_comma = Spacj\u0119 wstawiamy po przecinku, nie przed przecinkiem
 
-startChecking=Sprawdzanie w j\u0119zyku\: {0}
+startChecking = Sprawdzanie w j\u0119zyku\: {0}
 
-sv=szwedzki
+sv = szwedzki
 
-tl=tagalski
+tl = tagalski
 
-textLanguage=J\u0119zyk tekstu\:
+textLanguage = J\u0119zyk tekstu\:
 
-two_commas=Dwa przecinki
+two_commas = Dwa przecinki
 
-two_dots=Dwie kropki
+two_dots = Dwie kropki
 
-uk=ukrai\u0144ski
+uk = ukrai\u0144ski
 
-unpaired_brackets=Niesparowany cudzys\u0142\u00f3w, nawias itd.
+unpaired_brackets = Niesparowany cudzys\u0142\u00f3w, nawias itd.
 
-whitespace_repetition=Prawdopodobna liter\u00f3wka\: wiele spacji z rz\u0119du
+whitespace_repetition = Prawdopodobna liter\u00f3wka\: wiele spacji z rz\u0119du
 
-ro=rumu\u0144ski
+ro = rumu\u0144ski
 
-zh=chi\u0144ski
+zh = chi\u0144ski
 
