--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_ro.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_ro.properties
@@ -1,206 +1,205 @@
-#X-Generator: crowdin.net
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd=Automatically detect language
+atd = Automatically detect language
 
-ast=Asturian
+ast = Asturian
 
-be=Bielorus\u0103
+be = Bielorus\u0103
 
 br = Breton
 
-ca=Catalan\u0103
+ca = Catalan\u0103
 
-category_case=Capitalizare
+category_case = Capitalizare
 
-category_false_friend=Prieteni fal\u0219i
+category_false_friend = Prieteni fal\u0219i
 
-category_grammar=Gramatic\u0103
+category_grammar = Gramatic\u0103
 
-category_misc=Diverse
+category_misc = Diverse
 
-category_typo=Posibil\u0103 gre\u0219eal\u0103 de tastare
+category_typo = Posibil\u0103 gre\u0219eal\u0103 de tastare
 
-checkDone=Verificare complet\u0103, s-au g\u0103sit {0} probleme probabile
+checkDone = Verificare complet\u0103, s-au g\u0103sit {0} probleme probabile
 
-checkText=Verifi&c\u0103 textul
+checkText = Verifi&c\u0103 textul
 
-correctionMessage=Corectare\:
+correctionMessage = Corectare\:
 
-cs=Ceh\u0103
+cs = Ceh\u0103
 
-da=Danez\u0103
+da = Danez\u0103
 
-de=German\u0103
+de = German\u0103
 
-desc_comma_whitespace=Spa\u021bii puse \u00eenainte de virgul\u0103 sau \u00eenainte/dup\u0103 paranteze
+desc_comma_whitespace = Spa\u021bii puse \u00eenainte de virgul\u0103 sau \u00eenainte/dup\u0103 paranteze
 
-desc_double_punct=S-au folosit dou\u0103 puncte sau virgule consecutive
+desc_double_punct = S-au folosit dou\u0103 puncte sau virgule consecutive
 
-desc_repetition=Cuv\u00e2nt repetat (ex\: \u201evoi voi\u201d)
+desc_repetition = Cuv\u00e2nt repetat (ex\: \u201evoi voi\u201d)
 
-desc_repetition_short=Cuv\u00e2nt repetat
+desc_repetition_short = Cuv\u00e2nt repetat
 
-desc_unpaired_brackets=Acolade, paranteze, ghilimele sau alte simboluri similare desperecheate
+desc_unpaired_brackets = Acolade, paranteze, ghilimele sau alte simboluri similare desperecheate
 
-desc_uppercase_sentence=Verific\u0103 dac\u0103 propozi\u021bia \u00eencepe cu liter\u0103 mare
+desc_uppercase_sentence = Verific\u0103 dac\u0103 propozi\u021bia \u00eencepe cu liter\u0103 mare
 
-desc_whitespacerepetition=Spa\u021biu repetat (formatare gre\u0219it\u0103)
+desc_whitespacerepetition = Spa\u021biu repetat (formatare gre\u0219it\u0103)
 
-double_dots_short=Dou\u0103 puncte consecutive
+double_dots_short = Dou\u0103 puncte consecutive
 
-double_commas_short=Dou\u0103 virgule consecutive
+double_commas_short = Dou\u0103 virgule consecutive
 
-en=Englez\u0103
+en = Englez\u0103
 
-enterText=V\u0103 rug\u0103m s\u0103 tasta\u021bi sau s\u0103 lipi\u021bi textul de verificat \u00een zona de sus
+enterText = V\u0103 rug\u0103m s\u0103 tasta\u021bi sau s\u0103 lipi\u021bi textul de verificat \u00een zona de sus
 
-enterText2=V\u0103 rug\u0103m s\u0103 insera\u021bi textul de verificat aici
+enterText2 = V\u0103 rug\u0103m s\u0103 insera\u021bi textul de verificat aici
 
-eo=Esperanto
+eo = Esperanto
 
-errorContext=Context\:
+errorContext = Context\:
 
-errorMessage=Mesaj\:
+errorMessage = Mesaj\:
 
-es=Spaniol\u0103
+es = Spaniol\u0103
 
-false_friend=Prieten fals
+false_friend = Prieten fals
 
-false_friend_desc=indiciu de prieten fals pentru\:
+false_friend_desc = indiciu de prieten fals pentru\:
 
-false_friend_hint=Indiciu\: \u201e{0}\u201d ({1}) \u00eenseamn\u0103 {2} ({3}).
+false_friend_hint = Indiciu\: \u201e{0}\u201d ({1}) \u00eenseamn\u0103 {2} ({3}).
 
-false_friend_suggestion=A\u021bi vrut s\u0103 scrie\u021bi {0}?
+false_friend_suggestion = A\u021bi vrut s\u0103 scrie\u021bi {0}?
 
-fr=Francez\u0103
+fr = Francez\u0103
 
-gl=Galician\u0103
+gl = Galician\u0103
 
 guiAddButton=Add...
-guiCancelButton=Renun\u021b\u0103
+guiCancelButton = Renun\u021b\u0103
 
-guiCheckComplete=Verificarea f\u0103cut\u0103 de LanguageTool este complet\u0103.
+guiCheckComplete = Verificarea f\u0103cut\u0103 de LanguageTool este complet\u0103.
 guiCloseButton=Close
 
-guiConfigWindowTitle=Op\u021biuni pentru LanguageTool
+guiConfigWindowTitle = Op\u021biuni pentru LanguageTool
 
-guiDemoText=Acesta este un exemplu pentru a v\u0103 v\u0103 ar\u0103ta cum func\u021bioneaz\u0103 LanguageTool. Re\u021bine\u021bi c\u0103 nu include \u0219i verificare ortografic\u0103.
+guiDemoText = Acesta este un exemplu pentru a v\u0103 v\u0103 ar\u0103ta cum func\u021bioneaz\u0103 LanguageTool. Re\u021bine\u021bi c\u0103 nu include \u0219i verificare ortografic\u0103.
 guiLanguageManagerDialog=Language Module Manager
 
-guiMatchCount=Posibile erori\:
+guiMatchCount = Posibile erori\:
 
-guiMenuAbout=&Despre...
+guiMenuAbout = &Despre...
 
-guiMenuAddRules=\u00eencarc\u0103 un fi\u0219ier de &reguli
+guiMenuAddRules = \u00eencarc\u0103 un fi\u0219ier de &reguli
 
-guiMenuCheckClipboard=Verifi&c\u0103 textul din memorie
+guiMenuCheckClipboard = Verifi&c\u0103 textul din memorie
 
-guiMenuFile=&Fi\u0219ier
+guiMenuFile = &Fi\u0219ier
 
-guiMenuHelp=&Ajutor
+guiMenuHelp = &Ajutor
 
-guiMenuHide=&Ascunde \u00een zona de notificare
+guiMenuHide = &Ascunde \u00een zona de notificare
 
-guiMenuOpen=&Deschide...
+guiMenuOpen = &Deschide...
 
-guiMenuOptions=&Op\u021biuni...
+guiMenuOptions = &Op\u021biuni...
 
-guiMenuQuit=&Ie\u0219ire
+guiMenuQuit = &Ie\u0219ire
 
-guiMenuShowMainWindow=Deschide fereastra principal\u0103
+guiMenuShowMainWindow = Deschide fereastra principal\u0103
 
-guiMotherTongue=Limba dumneavoastr\u0103 matern\u0103\:
+guiMotherTongue = Limba dumneavoastr\u0103 matern\u0103\:
 
-guiNoErrorsFound=Nu s-au g\u0103sit erori sau avertismente (limba {0})
+guiNoErrorsFound = Nu s-au g\u0103sit erori sau avertismente (limba {0})
 
-guiNoErrorsFoundSelectedText=Nu s-au g\u0103sit erori sau avertismente \u00een textul selectat (limba {0})
+guiNoErrorsFoundSelectedText = Nu s-au g\u0103sit erori sau avertismente \u00een textul selectat (limba {0})
 
-guiOKButton=&OK
+guiOKButton = &OK
 
-guiOOoChangeButton=S&chimb\u0103
+guiOOoChangeButton = S&chimb\u0103
 
-guiOOoCloseButton=\u00eenchide
+guiOOoCloseButton = \u00eenchide
 
-guiOOoIgnoreAllButton=Ignor\u0103 tot
+guiOOoIgnoreAllButton = Ignor\u0103 tot
 
-guiOOoIgnoreButton=Ignor\u0103
+guiOOoIgnoreButton = Ignor\u0103
 
-guiOOoOptionsButton=Op\u021biuni...
+guiOOoOptionsButton = Op\u021biuni...
 
-guiProgressWindowTitle=LanguageTool\: Se verific\u0103 textul...
+guiProgressWindowTitle = LanguageTool\: Se verific\u0103 textul...
 
 guiRemoveButton=Remove
-guiReplaceWindowTitle=\u00eenlocuire text
+guiReplaceWindowTitle = \u00eenlocuire text
 
-guiReplaceWithOtherText=<alt text>
+guiReplaceWithOtherText = <alt text>
 
-guiRunOnPort=Ruleaz\u0103 ca server pe po&rtul
+guiRunOnPort = Ruleaz\u0103 ca server pe po&rtul
 
-guiSelectionCheckComplete=Verificarea LanguageTool a textului selectat este complet\u0103.
+guiSelectionCheckComplete = Verificarea LanguageTool a textului selectat este complet\u0103.
 
-guiTagText=&Tag Text
+guiTagText = &Tag Text
 
-incorrect_case=Propozi\u021bia nu \u00eencepe cu liter\u0103 mare
+incorrect_case = Propozi\u021bia nu \u00eencepe cu liter\u0103 mare
 
-is=Islandez\u0103
+is = Islandez\u0103
 
-it=Italian\u0103
+it = Italian\u0103
 
-km=Khmer
+km = Khmer
 
-lt=Lituanian\u0103
+lt = Lituanian\u0103
 
-missing_space_after_comma=Pune\u021bi un spa\u021biu dup\u0103 virgul\u0103
+missing_space_after_comma = Pune\u021bi un spa\u021biu dup\u0103 virgul\u0103
 
-ml=Malayalam
+ml = Malayalam
 
-nl=Olandez\u0103
+nl = Olandez\u0103
 
-no_space_after=Nu pune\u021bi spa\u021biu dup\u0103 deschiderea parantezei
+no_space_after = Nu pune\u021bi spa\u021biu dup\u0103 deschiderea parantezei
 
-no_space_before=Nu pune\u021bi spa\u021biu dup\u0103 \u00eenchiderea parantezei
+no_space_before = Nu pune\u021bi spa\u021biu dup\u0103 \u00eenchiderea parantezei
 
-no_space_before_dot=Nu pune\u021bi spa\u021biu \u00eenainte de punct
+no_space_before_dot = Nu pune\u021bi spa\u021biu \u00eenainte de punct
 
-pl=Polonez\u0103
+pl = Polonez\u0103
 
-repetition=Posibil\u0103 gre\u0219eal\u0103\: a\u021bi repetat un cuv\u00e2nt
+repetition = Posibil\u0103 gre\u0219eal\u0103\: a\u021bi repetat un cuv\u00e2nt
 
-result1=<br><b> {0}. Line {1}, column {2}</b><br>
+result1 = <br><b> {0}. Line {1}, column {2}</b><br>
 
-resultAreaText=Rezultatele vor ap\u0103rea aici
+resultAreaText = Rezultatele vor ap\u0103rea aici
 
-resultTime=<br>Time\: {0}ms (including {1}ms for rule matching)<br>
+resultTime = <br>Time\: {0}ms (including {1}ms for rule matching)<br>
 
-ru=Rus\u0103
+ru = Rus\u0103
 
-sk=Slovac\u0103
+sk = Slovac\u0103
 
-sl=Sloven\u0103
+sl = Sloven\u0103
 
-space_after_comma=Pune un spa\u021biu dup\u0103 virgul\u0103, dar nu \u00eenainte de virgul\u0103
+space_after_comma = Pune un spa\u021biu dup\u0103 virgul\u0103, dar nu \u00eenainte de virgul\u0103
 
-startChecking=Verificarea \u00eencepe \u00een {0}
+startChecking = Verificarea \u00eencepe \u00een {0}
 
-sv=Suedez\u0103
+sv = Suedez\u0103
 
-tl=Tagalog
+tl = Tagalog
 
-textLanguage=Limba textului\:
+textLanguage = Limba textului\:
 
-two_commas=Dou\u0103 virgule consecutive
+two_commas = Dou\u0103 virgule consecutive
 
-two_dots=Dou\u0103 puncte consecutive
+two_dots = Dou\u0103 puncte consecutive
 
-uk=Ukrainian
+uk = Ukrainian
 
-unpaired_brackets=Parantez\u0103 nepereche
+unpaired_brackets = Parantez\u0103 nepereche
 
-whitespace_repetition=Posibi\u0103 gre\u0219eal\u0103\: a\u021bi repetat un spa\u021biu
+whitespace_repetition = Posibi\u0103 gre\u0219eal\u0103\: a\u021bi repetat un spa\u021biu
 
-ro=Rom\u00e2n\u0103
+ro = Rom\u00e2n\u0103
 
-zh=Chinese
+zh = Chinese
 
