--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_sl.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_sl.properties
@@ -1,206 +1,205 @@
-#X-Generator: crowdin.net
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd=Automatically detect language
+atd = Samodejno zaznaj jezik
 
-ast=Asturian
+ast = asturijski
 
-be=beloruski
+be = beloruski
 
-br = Breton
+br = bretonski
 
-ca=katalonski
+ca = katalonski
 
-category_case=Velike za\u010detnice
+category_case = Velike za\u010detnice
 
-category_false_friend=La\u017eni prijatelji
+category_false_friend = La\u017eni prijatelji
 
-category_grammar=Slovnica
+category_grammar = Slovnica
 
-category_misc=Razno
+category_misc = Razno
 
-category_typo=Mo\u017ena tipkarska napaka
+category_typo = Mo\u017ena tipkarska napaka
 
-checkDone=Preverjanje kon\u010dano, najdenih {0} potencialnih te\u017eav
+checkDone = Preverjanje kon\u010dano, najdenih {0} potencialnih te\u017eav
 
-checkText=&Preveri besedilo
+checkText = &Preveri besedilo
 
-correctionMessage=Popravek\:
+correctionMessage = Popravek\:
 
-cs=\u010de\u0161ki
+cs = \u010de\u0161ki
 
-da=danski
+da = danski
 
-de=nem\u0161ki
+de = nem\u0161ki
 
-desc_comma_whitespace=Uporaba presledka, tabulatorja ali preloma vrstice pred vejico in pred/po oklepaju
+desc_comma_whitespace = Uporaba presledka, tabulatorja ali preloma vrstice pred vejico in pred/po oklepaju
 
-desc_double_punct=Uporaba dveh zaporednih pik ali vejic
+desc_double_punct = Uporaba dveh zaporednih pik ali vejic
 
-desc_repetition=Podvojena beseda (npr. 'bo bo')
+desc_repetition = Podvojena beseda (npr. 'bo bo')
 
-desc_repetition_short=Podvojena beseda
+desc_repetition_short = Podvojena beseda
 
-desc_unpaired_brackets=Neparni oklepaji, zaviti oklepaji, narekovaji in podobni znaki
+desc_unpaired_brackets = Neparni oklepaji, zaviti oklepaji, narekovaji in podobni znaki
 
-desc_uppercase_sentence=Preveri, da se poved za\u010dne z veliko za\u010detnico
+desc_uppercase_sentence = Preveri, da se poved za\u010dne z veliko za\u010detnico
 
-desc_whitespacerepetition=Ponovljen presledek (nepravilno oblikovanje)
+desc_whitespacerepetition = Ponovljen presledek (nepravilno oblikovanje)
 
-double_dots_short=Zaporedni piki
+double_dots_short = Zaporedni piki
 
-double_commas_short=Zaporedni vejici
+double_commas_short = Zaporedni vejici
 
-en=angle\u0161ki
+en = angle\u0161ki
 
-enterText=Prosimo, vnesite ali prilepite besedilo za preverjanje v zgornje podro\u010dje
+enterText = V zgornje obmo\u010dje vnesite ali prilepite besedilo za preverjanje
 
-enterText2=Prosimo, vnesite besedilo za preverjanje semkaj
+enterText2 = Semkaj vnesite besedilo za preverjanje
 
-eo=esperanto
+eo = esperanto
 
-errorContext=Kontekst\:
+errorContext = Kontekst\:
 
-errorMessage=Sporo\u010dilo\:
+errorMessage = Sporo\u010dilo\:
 
-es=\u0161panski
+es = \u0161panski
 
-false_friend=La\u017eni prijatelj
+false_friend = La\u017eni prijatelj
 
-false_friend_desc=namig o napa\u010dnem prijatelju za\:
+false_friend_desc = namig o napa\u010dnem prijatelju za\:
 
-false_friend_hint=Namig\: "{0}" ({1}) pomeni {2} ({3}).
+false_friend_hint = Namig\: "{0}" ({1}) pomeni {2} ({3}).
 
-false_friend_suggestion=Ste imeli v mislih {0}?
+false_friend_suggestion = Ste imeli v mislih {0}?
 
-fr=francoski
+fr = francoski
 
-gl=galicijski
+gl = galicijski
 
-guiAddButton=Add...
-guiCancelButton=Prekli\u010di
+guiAddButton=Dodaj ...
+guiCancelButton = Prekli\u010di
 
-guiCheckComplete=Preverjanje z LanguageTool je dokon\u010dano.
-guiCloseButton=Close
+guiCheckComplete = Preverjanje z LanguageTool je dokon\u010dano.
+guiCloseButton=Zapri
 
-guiConfigWindowTitle=Mo\u017enosti LanguageTool
+guiConfigWindowTitle = Mo\u017enosti LanguageTool
 
-guiDemoText=To je primer vnosa za potrebe prikaza delovanja orodja LanguageTool. Upo\u0161tevajte, da ne vklju\u010duje preverjanja \u010drkovanja.
-guiLanguageManagerDialog=Language Module Manager
+guiDemoText = To je primer vnosa za potrebe prikaza delovanja orodja LanguageTool. Upo\u0161tevajte, da ne vklju\u010duje preverjanja \u010drkovanja.
+guiLanguageManagerDialog=Upravitelj jezikovnih modulov
 
-guiMatchCount=Mo\u017ene napake\:
+guiMatchCount = Mo\u017ene napake\:
 
-guiMenuAbout=&O raz\u0161iritvi ...
+guiMenuAbout = &O raz\u0161iritvi ...
 
-guiMenuAddRules=Nalo\u017ei &datoteko s pravili
+guiMenuAddRules = Nalo\u017ei &datoteko s pravili
 
-guiMenuCheckClipboard=&Preveri besedilo na odlo\u017ei\u0161\u010du
+guiMenuCheckClipboard = &Preveri besedilo na odlo\u017ei\u0161\u010du
 
-guiMenuFile=&Datoteka
+guiMenuFile = &Datoteka
 
-guiMenuHelp=Po&mo\u010d
+guiMenuHelp = Po&mo\u010d
 
-guiMenuHide=&Skrij v sistemski pladenj
+guiMenuHide = &Skrij v sistemski pladenj
 
-guiMenuOpen=&Odpri ...
+guiMenuOpen = &Odpri ...
 
-guiMenuOptions=&Mo\u017enosti ...
+guiMenuOptions = &Mo\u017enosti ...
 
-guiMenuQuit=I&zhod
+guiMenuQuit = I&zhod
 
-guiMenuShowMainWindow=Odpri glavno okno
+guiMenuShowMainWindow = Odpri glavno okno
 
-guiMotherTongue=Va\u0161 materni jezik\:
+guiMotherTongue = Va\u0161 materni jezik\:
 
-guiNoErrorsFound=Ni najdenih napak ali opozoril (jezik\: {0})
+guiNoErrorsFound = Ni najdenih napak ali opozoril (jezik\: {0})
 
-guiNoErrorsFoundSelectedText=V izbranem besedilu ni najdenih napak ali opozoril (jezik\: {0})
+guiNoErrorsFoundSelectedText = V izbranem besedilu ni najdenih napak ali opozoril (jezik\: {0})
 
-guiOKButton=V &redu
+guiOKButton = V &redu
 
-guiOOoChangeButton=&Spremeni
+guiOOoChangeButton = &Spremeni
 
-guiOOoCloseButton=Zapri
+guiOOoCloseButton = Zapri
 
-guiOOoIgnoreAllButton=Prezri vse
+guiOOoIgnoreAllButton = Prezri vse
 
-guiOOoIgnoreButton=Prezri
+guiOOoIgnoreButton = Prezri
 
-guiOOoOptionsButton=Mo\u017enosti ...
+guiOOoOptionsButton = Mo\u017enosti ...
 
-guiProgressWindowTitle=LanguageTool\: preverjanje besedila ...
+guiProgressWindowTitle = LanguageTool\: preverjanje besedila ...
 
-guiRemoveButton=Remove
-guiReplaceWindowTitle=Zamenjaj besedilo
+guiRemoveButton=Odstrani
+guiReplaceWindowTitle = Zamenjaj besedilo
 
-guiReplaceWithOtherText=<drugo besedilo>
+guiReplaceWithOtherText = <drugo besedilo>
 
-guiRunOnPort=Po\u017eeni kot stre\u017enik na v&ratih
+guiRunOnPort = Po\u017eeni kot stre\u017enik na v&ratih
 
-guiSelectionCheckComplete=Preverjanje izbranega besedila z LanguageTool je dokon\u010dano.
+guiSelectionCheckComplete = Preverjanje izbranega besedila z LanguageTool je dokon\u010dano.
 
-guiTagText=&Tag Text
+guiTagText = Ozna&\u010di besedilo
 
-incorrect_case=Ta poved se ne za\u010denja z veliko za\u010detnico
+incorrect_case = Ta poved se ne za\u010denja z veliko za\u010detnico
 
-is=islandski
+is = islandski
 
-it=italijanski
+it = italijanski
 
-km=Khmer
+km = kmerski
 
-lt=litovski
+lt = litovski
 
-missing_space_after_comma=Po vejici vstavi presledek
+missing_space_after_comma = Po vejici vstavi presledek
 
-ml=malajalamski
+ml = malajalamski
 
-nl=nizozemski
+nl = nizozemski
 
-no_space_after=Ne postavljaj presledka za oklepaj
+no_space_after = Ne postavljaj presledka za oklepaj
 
-no_space_before=Ne postavljaj presledka pred zaklepaj
+no_space_before = Ne postavljaj presledka pred zaklepaj
 
-no_space_before_dot=Ne postavljaj presledka po piki
+no_space_before_dot = Ne postavljaj presledka po piki
 
-pl=poljski
+pl = poljski
 
-repetition=Mo\u017ena tipkarska napaka\: ponovili ste besedo
+repetition = Mo\u017ena tipkarska napaka\: ponovili ste besedo
 
-result1=<br><b> {0}. Line {1}, column {2}</b><br>
+result1 = <br><b> {0}. Vrstica {1}, stolpec {2}</b><br>
 
-resultAreaText=Tukaj se bodo izpisali rezultati
+resultAreaText = Tukaj se bodo izpisali rezultati
 
-resultTime=<br>Time\: {0}ms (including {1}ms for rule matching)<br>
+resultTime = <br>\u010cas\: {0}ms (vklju\u010dno {1}ms za ujemanje pravil)<br>
 
-ru=ruski
+ru = ruski
 
-sk=slova\u0161ki
+sk = slova\u0161ki
 
-sl=slovenski
+sl = slovenski
 
-space_after_comma=Presledek vstavi po vejici, ne pa pred vejico
+space_after_comma = Presledek vstavi po vejici, ne pa pred vejico
 
-startChecking=Za\u010detek preverjanja v {0}
+startChecking = Za\u010detek preverjanja v {0}
 
-sv=\u0161vedski
+sv = \u0161vedski
 
-tl=Tagalog
+tl = tagalo\u0161ki
 
-textLanguage=Jezik besedila\:
+textLanguage = Jezik besedila\:
 
-two_commas=Dve zaporedni vejici
+two_commas = Dve zaporedni vejici
 
-two_dots=Dve zaporedni piki
+two_dots = Dve zaporedni piki
 
-uk=ukrajinski
+uk = ukrajinski
 
-unpaired_brackets=Neparni oklepaji ali podobni znaki
+unpaired_brackets = Neparni oklepaji ali podobni znaki
 
-whitespace_repetition=Mo\u017ena tipkarska napaka\: ponovili ste presledek
+whitespace_repetition = Mo\u017ena tipkarska napaka\: ponovili ste presledek
 
-ro=romunski
+ro = romunski
 
-zh=Chinese
+zh = kitajski
 
