--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_sv.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_sv.properties
@@ -1,206 +1,205 @@
-#X-Generator: crowdin.net
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd=Automatically detect language
+atd = Automatically detect language
 
-ast=Asturian
+ast = Asturian
 
-be=Vitryska
+be = Vitryska
 
 br = Breton
 
-ca=Katalanska
+ca = Katalanska
 
-category_case=Stor eller liten bokstav
+category_case = Stor eller liten bokstav
 
-category_false_friend=Oriktiga v\u00e4nner
+category_false_friend = Oriktiga v\u00e4nner
 
-category_grammar=Grammatik
+category_grammar = Grammatik
 
-category_misc=\u00f6vrigt
+category_misc = \u00f6vrigt
 
-category_typo=Eventuellt ett stavfel
+category_typo = Eventuellt ett stavfel
 
-checkDone=Kontroll utf\u00f6rd, Hittade {0} potentiella problem
+checkDone = Kontroll utf\u00f6rd, Hittade {0} potentiella problem
 
-checkText=&Kontrollera Text
+checkText = &Kontrollera Text
 
-correctionMessage=R\u00e4ttelse\:
+correctionMessage = R\u00e4ttelse\:
 
-cs=Tjeckiska
+cs = Tjeckiska
 
-da=Danska
+da = Danska
 
-de=Tyska
+de = Tyska
 
-desc_comma_whitespace=Anv\u00e4ndande av blanksteg f\u00f6re kommatecken eller f\u00f6re/efter parentes
+desc_comma_whitespace = Anv\u00e4ndande av blanksteg f\u00f6re kommatecken eller f\u00f6re/efter parentes
 
-desc_double_punct=Anv\u00e4ndande av dubbla punkter eller kommatecken
+desc_double_punct = Anv\u00e4ndande av dubbla punkter eller kommatecken
 
-desc_repetition=Repetition av ord (exempelvis 'till till')
+desc_repetition = Repetition av ord (exempelvis 'till till')
 
-desc_repetition_short=Repetition av ord 
+desc_repetition_short = Repetition av ord
 
-desc_unpaired_brackets=Icke ihopparade parenteser, citattecken eller liknande symboler
+desc_unpaired_brackets = Icke ihopparade parenteser, citattecken eller liknande symboler
 
-desc_uppercase_sentence=Kontrollera att meningar b\u00f6rjar med stor bokstav
+desc_uppercase_sentence = Kontrollera att meningar b\u00f6rjar med stor bokstav
 
-desc_whitespacerepetition=Upprepade mellanslag (d\u00e5lig formateringsvana)
+desc_whitespacerepetition = Upprepade mellanslag (d\u00e5lig formateringsvana)
 
-double_dots_short=Tv\u00e5 punkter i f\u00f6ljd
+double_dots_short = Tv\u00e5 punkter i f\u00f6ljd
 
-double_commas_short=Tv\u00e5 kommatecken i f\u00f6ljd
+double_commas_short = Tv\u00e5 kommatecken i f\u00f6ljd
 
-en=Engelska
+en = Engelska
 
-enterText=Skriv eller klistra in text i \u00f6vre f\u00e4ltet
+enterText = Skriv eller klistra in text i \u00f6vre f\u00e4ltet
 
-enterText2=L\u00e4gg in text f\u00f6r kontroll h\u00e4r
+enterText2 = L\u00e4gg in text f\u00f6r kontroll h\u00e4r
 
-eo=Esperanto
+eo = Esperanto
 
-errorContext=Sammanhang\:
+errorContext = Sammanhang\:
 
-errorMessage=Meddelande\:
+errorMessage = Meddelande\:
 
-es=Spanska
+es = Spanska
 
-false_friend=Falska v\u00e4nner
+false_friend = Falska v\u00e4nner
 
-false_friend_desc=Hint om falska v\u00e4nner\:
+false_friend_desc = Hint om falska v\u00e4nner\:
 
-false_friend_hint=Hint\: "{0}" ({1}) betyder {2} ({3}).
+false_friend_hint = Hint\: "{0}" ({1}) betyder {2} ({3}).
 
-false_friend_suggestion=Menade du {0}?
+false_friend_suggestion = Menade du {0}?
 
-fr=Franska
+fr = Franska
 
-gl=Galiciska
+gl = Galiciska
 
 guiAddButton=Add...
-guiCancelButton=Avbryt
+guiCancelButton = Avbryt
 
-guiCheckComplete=LanguageTool kontroll \u00e4r f\u00e4rdig.
+guiCheckComplete = LanguageTool kontroll \u00e4r f\u00e4rdig.
 guiCloseButton=Close
 
-guiConfigWindowTitle=LanguageTool Alternativ
+guiConfigWindowTitle = LanguageTool Alternativ
 
-guiDemoText=Detta \u00e4r en en exempeltext f\u00f6r att visa hur LanguageTool fungerar.. Notera att den inte inneh\u00e5lle n\u00e5gon stavningskontrol.
+guiDemoText = Detta \u00e4r en en exempeltext f\u00f6r att visa hur LanguageTool fungerar.. Notera att den inte inneh\u00e5lle n\u00e5gon stavningskontrol.
 guiLanguageManagerDialog=Language Module Manager
 
-guiMatchCount=M\u00f6jliga fel\:
+guiMatchCount = M\u00f6jliga fel\:
 
-guiMenuAbout=&Om...
+guiMenuAbout = &Om...
 
-guiMenuAddRules=Ladda in &Regelfil
+guiMenuAddRules = Ladda in &Regelfil
 
-guiMenuCheckClipboard=&Kontrollera texten i Urklipp
+guiMenuCheckClipboard = &Kontrollera texten i Urklipp
 
-guiMenuFile=&Arkiv
+guiMenuFile = &Arkiv
 
-guiMenuHelp=&Hj\u00e4lp
+guiMenuHelp = &Hj\u00e4lp
 
-guiMenuHide=&G\u00f6m i systemf\u00e4ltet
+guiMenuHide = &G\u00f6m i systemf\u00e4ltet
 
-guiMenuOpen=&\u00f6ppna...
+guiMenuOpen = &\u00f6ppna...
 
-guiMenuOptions=&Alternativ...
+guiMenuOptions = &Alternativ...
 
-guiMenuQuit=&Avsluta
+guiMenuQuit = &Avsluta
 
-guiMenuShowMainWindow=\u00f6ppna huvudf\u00f6nster
+guiMenuShowMainWindow = \u00f6ppna huvudf\u00f6nster
 
-guiMotherTongue=Ditt modersm\u00e5l\:
+guiMotherTongue = Ditt modersm\u00e5l\:
 
-guiNoErrorsFound=Hittade inga fel eller varningar (spr\u00e5k\: {0})
+guiNoErrorsFound = Hittade inga fel eller varningar (spr\u00e5k\: {0})
 
-guiNoErrorsFoundSelectedText=Hittade inga fel eller varningar i markerad text (spr\u00e5k\: {0})
+guiNoErrorsFoundSelectedText = Hittade inga fel eller varningar i markerad text (spr\u00e5k\: {0})
 
-guiOKButton=&OK
+guiOKButton = &OK
 
-guiOOoChangeButton=&\u00e4ndra
+guiOOoChangeButton = &\u00e4ndra
 
-guiOOoCloseButton=St\u00e4ng
+guiOOoCloseButton = St\u00e4ng
 
-guiOOoIgnoreAllButton=Ignorera Alla
+guiOOoIgnoreAllButton = Ignorera Alla
 
-guiOOoIgnoreButton=Ignorera
+guiOOoIgnoreButton = Ignorera
 
-guiOOoOptionsButton=Alternativ...
+guiOOoOptionsButton = Alternativ...
 
-guiProgressWindowTitle=LanguageTool\: Kontrollerar text...
+guiProgressWindowTitle = LanguageTool\: Kontrollerar text...
 
 guiRemoveButton=Remove
-guiReplaceWindowTitle=Ers\u00e4tt text
+guiReplaceWindowTitle = Ers\u00e4tt text
 
-guiReplaceWithOtherText=<annan text>
+guiReplaceWithOtherText = <annan text>
 
-guiRunOnPort=K\u00f6r server p\u00e5 po&rt
+guiRunOnPort = K\u00f6r server p\u00e5 po&rt
 
-guiSelectionCheckComplete=LanguageTool kontroll av markerad text \u00e4r utf\u00f6rd.
+guiSelectionCheckComplete = LanguageTool kontroll av markerad text \u00e4r utf\u00f6rd.
 
-guiTagText=&Tag Text
+guiTagText = &Tag Text
 
-incorrect_case=Denna mening b\u00f6rjar med liten bokstav
+incorrect_case = Denna mening b\u00f6rjar med liten bokstav
 
-is=Isl\u00e4ndska
+is = Isl\u00e4ndska
 
-it=Italienska
+it = Italienska
 
-km=Khmer
+km = Khmer
 
-lt=Litauiska
+lt = Litauiska
 
-missing_space_after_comma=L\u00e4gg till ett blanksteg efter kommatecknet
+missing_space_after_comma = L\u00e4gg till ett blanksteg efter kommatecknet
 
-ml=Malayalam
+ml = Malayalam
 
-nl=Holl\u00e4ndska
+nl = Holl\u00e4ndska
 
-no_space_after=Ta bort blanksteg efter \u00f6ppnande parentesen
+no_space_after = Ta bort blanksteg efter \u00f6ppnande parentesen
 
-no_space_before=Ta bort blanksteg f\u00f6re avslutande parentesen
+no_space_before = Ta bort blanksteg f\u00f6re avslutande parentesen
 
-no_space_before_dot=Tryck inte p\u00e5 blanksteg vid slutet
+no_space_before_dot = Tryck inte p\u00e5 blanksteg vid slutet
 
-pl=Polska
+pl = Polska
 
-repetition=M\u00f6jlig felskrivning\: du repeterade ett ord
+repetition = M\u00f6jlig felskrivning\: du repeterade ett ord
 
-result1=<br><b> {0}. Rad {1}, kolumn {2}</b><br>
+result1 = <br><b> {0}. Rad {1}, kolumn {2}</b><br>
 
-resultAreaText=Resultatet visas h\u00e4r
+resultAreaText = Resultatet visas h\u00e4r
 
-resultTime=<br>Tid\: {0}ms (inklusive {1} ms f\u00f6r regelmatchning)<br>
+resultTime = <br>Tid\: {0}ms (inklusive {1} ms f\u00f6r regelmatchning)<br>
 
-ru=Ryska
+ru = Ryska
 
-sk=Slovakiska
+sk = Slovakiska
 
-sl=Slovenska
+sl = Slovenska
 
-space_after_comma=L\u00e4gg till ett mellanrum efter kommatecknet, men inte f\u00f6re
+space_after_comma = L\u00e4gg till ett mellanrum efter kommatecknet, men inte f\u00f6re
 
-startChecking=P\u00e5b\u00f6rjar kontroll om {0}
+startChecking = P\u00e5b\u00f6rjar kontroll om {0}
 
-sv=Svenska
+sv = Svenska
 
-tl=Tagalog
+tl = Tagalog
 
-textLanguage=Textens spr\u00e5k\:
+textLanguage = Textens spr\u00e5k\:
 
-two_commas=Dubbla kommatecken
+two_commas = Dubbla kommatecken
 
-two_dots=Dubbla punkter
+two_dots = Dubbla punkter
 
-uk=Ukrainska
+uk = Ukrainska
 
-unpaired_brackets=Icke ihopparade parenteser eller liknande symboler
+unpaired_brackets = Icke ihopparade parenteser eller liknande symboler
 
-whitespace_repetition=M\u00f6jlig felskrivning\: du har gjort upprepade mellanslag.
+whitespace_repetition = M\u00f6jlig felskrivning\: du har gjort upprepade mellanslag.
 
-ro=Rom\u00e2n\u0103
+ro = Rom\u00e2n\u0103
 
-zh=Chinese
+zh = Chinese
 
