--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_ca.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_ca.properties
@@ -1,206 +1,205 @@
-#X-Generator: crowdin.net
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd=Automatically detect language
+atd = Automatically detect language
 
-ast=Asturian
+ast = Asturian
 
-be=Belarusian
+be = Belarusian
 
 br = Breton
 
-ca=Catalan
+ca = Catalan
 
-category_case=Capitalization
+category_case = Capitalization
 
-category_false_friend=False friends
+category_false_friend = False friends
 
-category_grammar=Grammar
+category_grammar = Grammar
 
-category_misc=Miscellaneous
+category_misc = Miscellaneous
 
-category_typo=Possible Typo
+category_typo = Possible Typo
 
-checkDone=Check done, {0} potential problems found
+checkDone = Check done, {0} potential problems found
 
-checkText=&Check Text
+checkText = &Check Text
 
-correctionMessage=Correction\:
+correctionMessage = Correction\:
 
-cs=Czech
+cs = Czech
 
-da=Danish
+da = Danish
 
-de=German
+de = German
 
-desc_comma_whitespace=Use of whitespace before comma and before/after parentheses
+desc_comma_whitespace = Use of whitespace before comma and before/after parentheses
 
-desc_double_punct=Use of two consecutive dots or commas
+desc_double_punct = Use of two consecutive dots or commas
 
-desc_repetition=Word repetition (e.g. 'will will')
+desc_repetition = Word repetition (e.g. 'will will')
 
-desc_repetition_short=Word repetition
+desc_repetition_short = Word repetition
 
-desc_unpaired_brackets=Unpaired braces, brackets, quotation marks and similar symbols
+desc_unpaired_brackets = Unpaired braces, brackets, quotation marks and similar symbols
 
-desc_uppercase_sentence=Checks that a sentence starts with an uppercase letter
+desc_uppercase_sentence = Checks that a sentence starts with an uppercase letter
 
-desc_whitespacerepetition=Whitespace repetition (bad formatting)
+desc_whitespacerepetition = Whitespace repetition (bad formatting)
 
-double_dots_short=Two consecutive dots
+double_dots_short = Two consecutive dots
 
-double_commas_short=Two consecutive comma
+double_commas_short = Two consecutive comma
 
-en=English
+en = English
 
-enterText=Please type or paste text to check in the top area
+enterText = Please type or paste text to check in the top area
 
-enterText2=Please insert text to check here
+enterText2 = Please insert text to check here
 
-eo=Esperanto
+eo = Esperanto
 
-errorContext=Context\:
+errorContext = Context\:
 
-errorMessage=Message\:
+errorMessage = Message\:
 
-es=Spanish
+es = Spanish
 
-false_friend=False friend
+false_friend = False friend
 
-false_friend_desc=false friend hint for\:
+false_friend_desc = false friend hint for\:
 
-false_friend_hint=Hint\: "{0}" ({1}) means {2} ({3}).
+false_friend_hint = Hint\: "{0}" ({1}) means {2} ({3}).
 
-false_friend_suggestion=Did you mean {0}?
+false_friend_suggestion = Did you mean {0}?
 
-fr=French
+fr = French
 
-gl=Galician
+gl = Galician
 
 guiAddButton=Add...
-guiCancelButton=Cancel
+guiCancelButton = Cancel
 
-guiCheckComplete=LanguageTool check is complete.
+guiCheckComplete = LanguageTool check is complete.
 guiCloseButton=Close
 
-guiConfigWindowTitle=LanguageTool Options
+guiConfigWindowTitle = LanguageTool Options
 
-guiDemoText=This is a example input to to show you how LanguageTool works. Note, however, that it does not include a spell checka.
+guiDemoText = This is a example input to to show you how LanguageTool works. Note, however, that it does not include a spell checka.
 guiLanguageManagerDialog=Language Module Manager
 
-guiMatchCount=Potential errors\:
+guiMatchCount = Potential errors\:
 
-guiMenuAbout=&About...
+guiMenuAbout = &About...
 
-guiMenuAddRules=Load &Rule File
+guiMenuAddRules = Load &Rule File
 
-guiMenuCheckClipboard=&Check Text in Clipboard
+guiMenuCheckClipboard = &Check Text in Clipboard
 
-guiMenuFile=&File
+guiMenuFile = &File
 
-guiMenuHelp=&Help
+guiMenuHelp = &Help
 
-guiMenuHide=&Hide to System Tray
+guiMenuHide = &Hide to System Tray
 
-guiMenuOpen=&Open...
+guiMenuOpen = &Open...
 
-guiMenuOptions=Option&s...
+guiMenuOptions = Option&s...
 
-guiMenuQuit=&Quit
+guiMenuQuit = &Quit
 
-guiMenuShowMainWindow=Open Main Window
+guiMenuShowMainWindow = Open Main Window
 
-guiMotherTongue=Your mother tongue\:
+guiMotherTongue = Your mother tongue\:
 
-guiNoErrorsFound=No errors or warnings found (language\: {0})
+guiNoErrorsFound = No errors or warnings found (language\: {0})
 
-guiNoErrorsFoundSelectedText=No errors or warnings found in selected text (language\: {0})
+guiNoErrorsFoundSelectedText = No errors or warnings found in selected text (language\: {0})
 
-guiOKButton=&OK
+guiOKButton = &OK
 
-guiOOoChangeButton=&Change
+guiOOoChangeButton = &Change
 
-guiOOoCloseButton=Close
+guiOOoCloseButton = Close
 
-guiOOoIgnoreAllButton=Ignore All
+guiOOoIgnoreAllButton = Ignore All
 
-guiOOoIgnoreButton=Ignore
+guiOOoIgnoreButton = Ignore
 
-guiOOoOptionsButton=Options...
+guiOOoOptionsButton = Options...
 
-guiProgressWindowTitle=LanguageTool\: Checking Text...
+guiProgressWindowTitle = LanguageTool\: Checking Text...
 
 guiRemoveButton=Remove
-guiReplaceWindowTitle=Replace text
+guiReplaceWindowTitle = Replace text
 
-guiReplaceWithOtherText=<other text>
+guiReplaceWithOtherText = <other text>
 
-guiRunOnPort=Run as server on po&rt
+guiRunOnPort = Run as server on po&rt
 
-guiSelectionCheckComplete=LanguageTool check of selected text is complete.
+guiSelectionCheckComplete = LanguageTool check of selected text is complete.
 
-guiTagText=&Tag Text
+guiTagText = &Tag Text
 
-incorrect_case=This sentence does not start with an uppercase letter
+incorrect_case = This sentence does not start with an uppercase letter
 
-is=Icelandic
+is = Icelandic
 
-it=Italian
+it = Italian
 
-km=Khmer
+km = Khmer
 
-lt=Lithuanian
+lt = Lithuanian
 
-missing_space_after_comma=Put a space after the comma
+missing_space_after_comma = Put a space after the comma
 
-ml=Malayalam
+ml = Malayalam
 
-nl=Dutch
+nl = Dutch
 
-no_space_after=Don't put a space after the opening parenthesis
+no_space_after = Don't put a space after the opening parenthesis
 
-no_space_before=Don't put a space before the closing parenthesis
+no_space_before = Don't put a space before the closing parenthesis
 
-no_space_before_dot=Don't put a space before the full stop
+no_space_before_dot = Don't put a space before the full stop
 
-pl=Polish
+pl = Polish
 
-repetition=Possible typo\: you repeated a word
+repetition = Possible typo\: you repeated a word
 
-result1=<br><b> {0}. Line {1}, column {2}</b><br>
+result1 = <br><b> {0}. Line {1}, column {2}</b><br>
 
-resultAreaText=Results will appear here
+resultAreaText = Results will appear here
 
-resultTime=<br>Time\: {0}ms (including {1}ms for rule matching)<br>
+resultTime = <br>Time\: {0}ms (including {1}ms for rule matching)<br>
 
-ru=Russian
+ru = Russian
 
-sk=Slovak
+sk = Slovak
 
-sl=Slovenian
+sl = Slovenian
 
-space_after_comma=Put a space after the comma, but not before the comma
+space_after_comma = Put a space after the comma, but not before the comma
 
-startChecking=Starting check in {0}
+startChecking = Starting check in {0}
 
-sv=Swedish
+sv = Swedish
 
-tl=Tagalog
+tl = Tagalog
 
-textLanguage=Text Language\:
+textLanguage = Text Language\:
 
-two_commas=Two consecutive commas
+two_commas = Two consecutive commas
 
-two_dots=Two consecutive dots
+two_dots = Two consecutive dots
 
-uk=Ukrainian
+uk = Ukrainian
 
-unpaired_brackets=Unpaired bracket or similar symbol
+unpaired_brackets = Unpaired bracket or similar symbol
 
-whitespace_repetition=Possible typo\: you repeated a whitespace
+whitespace_repetition = Possible typo\: you repeated a whitespace
 
-ro=Romanian
+ro = Romanian
 
-zh=Chinese
+zh = Chinese
 
