--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_cs.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_cs.properties
@@ -1,206 +1,205 @@
-#X-Generator: crowdin.net
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd=Automatically detect language
+atd = Automatically detect language
 
-ast=Asturian
+ast = Asturian
 
-be=B\u011blorusky
+be = B\u011blorusky
 
 br = Breton
 
-ca=Katal\u00e1nsky
+ca = Katal\u00e1nsky
 
-category_case=Kapitalizace
+category_case = Kapitalizace
 
-category_false_friend=Fale\u0161n\u00ed p\u0159\u00e1tel\u00e9
+category_false_friend = Fale\u0161n\u00ed p\u0159\u00e1tel\u00e9
 
-category_grammar=Gramatika
+category_grammar = Gramatika
 
-category_misc=R\u016fzn\u00e9
+category_misc = R\u016fzn\u00e9
 
-category_typo=Mo\u017en\u00fd p\u0159eklep
+category_typo = Mo\u017en\u00fd p\u0159eklep
 
-checkDone=Kontrola ukon\u010dena, {0} nalezen\u00fdch potenci\u00e1ln\u00edch chyb.
+checkDone = Kontrola ukon\u010dena, {0} nalezen\u00fdch potenci\u00e1ln\u00edch chyb.
 
-checkText=Prov\u00e9st kontrolu
+checkText = Prov\u00e9st kontrolu
 
-correctionMessage=Oprava\:
+correctionMessage = Oprava\:
 
-cs=\u010cesky
+cs = \u010cesky
 
-da=D\u00e1nsky
+da = D\u00e1nsky
 
-de=N\u011bmecky
+de = N\u011bmecky
 
-desc_comma_whitespace=Pou\u017eit\u00ed mezery p\u0159ed \u010d\u00e1rkou a p\u0159ed/za z\u00e1vorkami
+desc_comma_whitespace = Pou\u017eit\u00ed mezery p\u0159ed \u010d\u00e1rkou a p\u0159ed/za z\u00e1vorkami
 
-desc_double_punct=Pou\u017eit\u00ed dvou za sebou jdouc\u00edch \u010d\u00e1rek nebo te\u010dek
+desc_double_punct = Pou\u017eit\u00ed dvou za sebou jdouc\u00edch \u010d\u00e1rek nebo te\u010dek
 
-desc_repetition=Opakov\u00e1n\u00ed slov (nap\u0159. 'bude bude')
+desc_repetition = Opakov\u00e1n\u00ed slov (nap\u0159. 'bude bude')
 
-desc_repetition_short=Opakov\u00e1n\u00ed slov
+desc_repetition_short = Opakov\u00e1n\u00ed slov
 
-desc_unpaired_brackets=Nesp\u00e1rovan\u00e9 z\u00e1vorky, uvozovky nebo  podobn\u00e9 symboly
+desc_unpaired_brackets = Nesp\u00e1rovan\u00e9 z\u00e1vorky, uvozovky nebo  podobn\u00e9 symboly
 
-desc_uppercase_sentence=Zkontroluje zda v\u011bta za\u010d\u00edn\u00e1 velk\u00fdm po\u010d\u00e1te\u010dn\u00edm p\u00edsmenem
+desc_uppercase_sentence = Zkontroluje zda v\u011bta za\u010d\u00edn\u00e1 velk\u00fdm po\u010d\u00e1te\u010dn\u00edm p\u00edsmenem
 
-desc_whitespacerepetition=Opakov\u00e1n\u00ed mezery(\u0161patn\u00e9 form\u00e1tov\u00e1n\u00ed)
+desc_whitespacerepetition = Opakov\u00e1n\u00ed mezery(\u0161patn\u00e9 form\u00e1tov\u00e1n\u00ed)
 
-double_dots_short=Dv\u011b za sebou jdouc\u00ed te\u010dky
+double_dots_short = Dv\u011b za sebou jdouc\u00ed te\u010dky
 
-double_commas_short=Dv\u011b za sebou jdouc\u00ed \u010d\u00e1rky
+double_commas_short = Dv\u011b za sebou jdouc\u00ed \u010d\u00e1rky
 
-en=Anglicky
+en = Anglicky
 
-enterText=Pros\u00edm zadejte nebo vlo\u017ete text, kter\u00fd chcete zkontrolovat, do vrchn\u00ed oblasti
+enterText = Pros\u00edm zadejte nebo vlo\u017ete text, kter\u00fd chcete zkontrolovat, do vrchn\u00ed oblasti
 
-enterText2=Zde zadejte po\u017eadovan\u00fd text
+enterText2 = Zde zadejte po\u017eadovan\u00fd text
 
-eo=Esperanto
+eo = Esperanto
 
-errorContext=Kontext\:
+errorContext = Kontext\:
 
-errorMessage=Zpr\u00e1va\:
+errorMessage = Zpr\u00e1va\:
 
-es=\u0160pan\u011blsky
+es = \u0160pan\u011blsky
 
-false_friend=Fale\u0161n\u00fd p\u0159\u00edtel
+false_friend = Fale\u0161n\u00fd p\u0159\u00edtel
 
-false_friend_desc=\u0161patn\u00fd p\u0159itel, n\u00e1pov\u011bda\:
+false_friend_desc = \u0161patn\u00fd p\u0159itel, n\u00e1pov\u011bda\:
 
-false_friend_hint=N\u00e1pov\u011bda\: "{0}" ({1}) znamen\u00e1 {2} ({3}).
+false_friend_hint = N\u00e1pov\u011bda\: "{0}" ({1}) znamen\u00e1 {2} ({3}).
 
-false_friend_suggestion=Mysleli ste {0}?
+false_friend_suggestion = Mysleli ste {0}?
 
-fr=Francouzsky
+fr = Francouzsky
 
-gl=Galicij\u0161tinsky
+gl = Galicij\u0161tinsky
 
 guiAddButton=Add...
-guiCancelButton=Storno
+guiCancelButton = Storno
 
-guiCheckComplete=LanguageTool kontrola byla ukon\u010dena
+guiCheckComplete = LanguageTool kontrola byla ukon\u010dena
 guiCloseButton=Close
 
-guiConfigWindowTitle=LanguageTool nastaven\u00ed
+guiConfigWindowTitle = LanguageTool nastaven\u00ed
 
-guiDemoText=Tohle je uk\u00e1zkov\u00fd vstup, aby p\u0159edvedl jak LanguageTool funguje. Pamatujte, pros\u00edm, \u017ee neobsahuje kontrolu pravopisu (spellchecker).
+guiDemoText = Tohle je uk\u00e1zkov\u00fd vstup, aby p\u0159edvedl jak LanguageTool funguje. Pamatujte, pros\u00edm, \u017ee neobsahuje kontrolu pravopisu (spellchecker).
 guiLanguageManagerDialog=Language Module Manager
 
-guiMatchCount=Potenci\u00e1ln\u00ed chyby\:
+guiMatchCount = Potenci\u00e1ln\u00ed chyby\:
 
-guiMenuAbout=O Aplikaci...
+guiMenuAbout = O Aplikaci...
 
-guiMenuAddRules=Load Rule File
+guiMenuAddRules = Load Rule File
 
-guiMenuCheckClipboard=Zkontrolovat text ve zchr\u00e1nce
+guiMenuCheckClipboard = Zkontrolovat text ve zchr\u00e1nce
 
-guiMenuFile=Soubor
+guiMenuFile = Soubor
 
-guiMenuHelp=N\u00e1pov\u011bda
+guiMenuHelp = N\u00e1pov\u011bda
 
-guiMenuHide=Schovat do syst\u00e9move li\u0161ty
+guiMenuHide = Schovat do syst\u00e9move li\u0161ty
 
-guiMenuOpen=Otev\u0159\u00edt...
+guiMenuOpen = Otev\u0159\u00edt...
 
-guiMenuOptions=Nastaven\u00ed...
+guiMenuOptions = Nastaven\u00ed...
 
-guiMenuQuit=Konec
+guiMenuQuit = Konec
 
-guiMenuShowMainWindow=Open main window
+guiMenuShowMainWindow = Open main window
 
-guiMotherTongue=V\u00e1\u0161 mate\u0159sk\u00fd jazyk\:
+guiMotherTongue = V\u00e1\u0161 mate\u0159sk\u00fd jazyk\:
 
-guiNoErrorsFound=\u017d\u00e1dn\u00e9 chyby ani varov\u00e1n\u00ed nebyly nalezeny (jazyk\: {0})
+guiNoErrorsFound = \u017d\u00e1dn\u00e9 chyby ani varov\u00e1n\u00ed nebyly nalezeny (jazyk\: {0})
 
-guiNoErrorsFoundSelectedText=\u017d\u00e1dn\u00e9 chyby ani varov\u00e1n\u00ed nebyly vo vyzna\u010den\u00e9m textu nalezeny (jazyk\: {0})
+guiNoErrorsFoundSelectedText = \u017d\u00e1dn\u00e9 chyby ani varov\u00e1n\u00ed nebyly vo vyzna\u010den\u00e9m textu nalezeny (jazyk\: {0})
 
-guiOKButton=&OK
+guiOKButton = &OK
 
-guiOOoChangeButton=Zam\u011bnit
+guiOOoChangeButton = Zam\u011bnit
 
-guiOOoCloseButton=Zav\u0159\u00edt
+guiOOoCloseButton = Zav\u0159\u00edt
 
-guiOOoIgnoreAllButton=Ignorovat v\u0161e
+guiOOoIgnoreAllButton = Ignorovat v\u0161e
 
-guiOOoIgnoreButton=Ignorovat
+guiOOoIgnoreButton = Ignorovat
 
-guiOOoOptionsButton=Nastaven\u00ed...
+guiOOoOptionsButton = Nastaven\u00ed...
 
-guiProgressWindowTitle=LanguageTool\: Kontrola textu...
+guiProgressWindowTitle = LanguageTool\: Kontrola textu...
 
 guiRemoveButton=Remove
-guiReplaceWindowTitle=Zam\u011bnit text
+guiReplaceWindowTitle = Zam\u011bnit text
 
-guiReplaceWithOtherText=<jin\u00fd text>
+guiReplaceWithOtherText = <jin\u00fd text>
 
-guiRunOnPort=Pob\u011b\u017e\u00ed jako server na portu
+guiRunOnPort = Pob\u011b\u017e\u00ed jako server na portu
 
-guiSelectionCheckComplete=LanguageTool kontrola ozna\u010den\u00e9ho textu je ukon\u010dena.
+guiSelectionCheckComplete = LanguageTool kontrola ozna\u010den\u00e9ho textu je ukon\u010dena.
 
-guiTagText=&Tag Text
+guiTagText = &Tag Text
 
-incorrect_case=Tato v\u011bta neza\u010d\u00edn\u00e1 z velk\u00fdm p\u00edsmenem
+incorrect_case = Tato v\u011bta neza\u010d\u00edn\u00e1 z velk\u00fdm p\u00edsmenem
 
-is=Islandsky
+is = Islandsky
 
-it=Italsky
+it = Italsky
 
-km=Khmer
+km = Khmer
 
-lt=Litevsky
+lt = Litevsky
 
-missing_space_after_comma=Vlo\u017eit mezeru za \u010d\u00e1rku
+missing_space_after_comma = Vlo\u017eit mezeru za \u010d\u00e1rku
 
-ml=Malaj\u00e1lamsky
+ml = Malaj\u00e1lamsky
 
-nl=Nizozemsky
+nl = Nizozemsky
 
-no_space_after=Nevkl\u00e1dat mezeru za otev\u00edrac\u00ed z\u00e1vorku
+no_space_after = Nevkl\u00e1dat mezeru za otev\u00edrac\u00ed z\u00e1vorku
 
-no_space_before=Nevkl\u00e1dat mezeru za uzav\u00edrac\u00ed z\u00e1vorku
+no_space_before = Nevkl\u00e1dat mezeru za uzav\u00edrac\u00ed z\u00e1vorku
 
-no_space_before_dot=Nevkl\u00e1dejte mezeru p\u0159ed te\u010dku
+no_space_before_dot = Nevkl\u00e1dejte mezeru p\u0159ed te\u010dku
 
-pl=Polsky
+pl = Polsky
 
-repetition=Mo\u017en\u00fd p\u0159eklep\: zopakovali jste slovo
+repetition = Mo\u017en\u00fd p\u0159eklep\: zopakovali jste slovo
 
-result1=<br><b> {0}. Line {1}, column {2}</b><br>
+result1 = <br><b> {0}. Line {1}, column {2}</b><br>
 
-resultAreaText=V\u00fdsledek se zobraz\u00ed zde
+resultAreaText = V\u00fdsledek se zobraz\u00ed zde
 
-resultTime=<br>Time\: {0}ms (including {1}ms for rule matching)<br>
+resultTime = <br>Time\: {0}ms (including {1}ms for rule matching)<br>
 
-ru=Rusky
+ru = Rusky
 
-sk=Slovensky
+sk = Slovensky
 
-sl=Slovinsky
+sl = Slovinsky
 
-space_after_comma=Vlo\u017eit mezeru za \u010d\u00e1rku, ale ne p\u0159ed \u010d\u00e1rku
+space_after_comma = Vlo\u017eit mezeru za \u010d\u00e1rku, ale ne p\u0159ed \u010d\u00e1rku
 
-startChecking=Za\u010d\u00e1tek kontroly v {0}
+startChecking = Za\u010d\u00e1tek kontroly v {0}
 
-sv=\u0160v\u00e9dsky
+sv = \u0160v\u00e9dsky
 
-tl=Tagalog
+tl = Tagalog
 
-textLanguage=Jazyk textu\:
+textLanguage = Jazyk textu\:
 
-two_commas=Dv\u011b po sebe jdouc\u00ed \u010d\u00e1rky
+two_commas = Dv\u011b po sebe jdouc\u00ed \u010d\u00e1rky
 
-two_dots=Dv\u011b po sebe jdouc\u00ed te\u010dky
+two_dots = Dv\u011b po sebe jdouc\u00ed te\u010dky
 
-uk=Ukrajinsky
+uk = Ukrajinsky
 
-unpaired_brackets=Nesp\u00e1rovan\u00e9 z\u00e1vorky nebo podobn\u00fd symbol
+unpaired_brackets = Nesp\u00e1rovan\u00e9 z\u00e1vorky nebo podobn\u00fd symbol
 
-whitespace_repetition=Mo\u017en\u00fd p\u0159eklep\: zopakovali jste mezeru
+whitespace_repetition = Mo\u017en\u00fd p\u0159eklep\: zopakovali jste mezeru
 
-ro=Rumunsky
+ro = Rumunsky
 
-zh=Chinese
+zh = Chinese
 
