--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_gl.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_gl.properties
@@ -1,206 +1,205 @@
-#X-Generator: crowdin.net
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd=Detecci\u00f3n autom\u00e1tica de idioma
+atd = Detecci\u00f3n autom\u00e1tica de idioma
 
-ast=asturiano
+ast = asturiano
 
-be=bielorruso
+be = bielorruso
 
 br = bret\u00f3n
 
-ca=catal\u00e1n
+ca = catal\u00e1n
 
-category_case=Mai\u00fasculas e min\u00fasculas
+category_case = Mai\u00fasculas e min\u00fasculas
 
-category_false_friend=Falsos amigos
+category_false_friend = Falsos amigos
 
-category_grammar=Gram\u00e1tica
+category_grammar = Gram\u00e1tica
 
-category_misc=Miscel\u00e1nea
+category_misc = Miscel\u00e1nea
 
-category_typo=Pos\u00edbeis erros tipogr\u00e1ficos
+category_typo = Pos\u00edbeis erros tipogr\u00e1ficos
 
-checkDone=Comprobaci\u00f3n feita, atop\u00e1ronse {0} problemas potenciais
+checkDone = Comprobaci\u00f3n feita, atop\u00e1ronse {0} problemas potenciais
 
-checkText=&Comprobar o texto
+checkText = &Comprobar o texto
 
-correctionMessage=Correcci\u00f3n\:
+correctionMessage = Correcci\u00f3n\:
 
-cs=checo
+cs = checo
 
-da=dan\u00e9s
+da = dan\u00e9s
 
-de=alem\u00e1n
+de = alem\u00e1n
 
-desc_comma_whitespace=Uso de espazos en branco diante dunha coma ou antes/despois de par\u00e9ntese
+desc_comma_whitespace = Uso de espazos en branco diante dunha coma ou antes/despois de par\u00e9ntese
 
-desc_double_punct=Uso de dous puntos ou comas consecutivos
+desc_double_punct = Uso de dous puntos ou comas consecutivos
 
-desc_repetition=Repetici\u00f3n dunha palabra (por exemplo, 'vai vai')
+desc_repetition = Repetici\u00f3n dunha palabra (por exemplo, 'vai vai')
 
-desc_repetition_short=Repetici\u00f3n dunha palabra
+desc_repetition_short = Repetici\u00f3n dunha palabra
 
-desc_unpaired_brackets=Par\u00e9nteses, comi\u00f1as e s\u00edmbolos similares desemparellados
+desc_unpaired_brackets = Par\u00e9nteses, comi\u00f1as e s\u00edmbolos similares desemparellados
 
-desc_uppercase_sentence=Comproba que unha oraci\u00f3n comece con mai\u00fascula
+desc_uppercase_sentence = Comproba que unha oraci\u00f3n comece con mai\u00fascula
 
-desc_whitespacerepetition=M\u00faltiples espazos en branco (erro de formato)
+desc_whitespacerepetition = M\u00faltiples espazos en branco (erro de formato)
 
-double_dots_short=Dous puntos consecutivos
+double_dots_short = Dous puntos consecutivos
 
-double_commas_short=D\u00c3\u00baas comas consecutivas
+double_commas_short = D\u00faas comas consecutivas
 
-en=ingl\u00e9s
+en = ingl\u00e9s
 
-enterText=Por favor, teclee ou pegue o texto a corrixir na \u00e1rea superior
+enterText = Por favor, teclee ou pegue o texto que desexa corrixir na \u00e1rea superior
 
-enterText2=Por favor, insira aqu\u00ed o texto a corrixir
+enterText2 = Por favor, insira aqu\u00ed o texto que desexa corrixir
 
-eo=esperanto
+eo = esperanto
 
-errorContext=Contexto\:
+errorContext = Contexto\:
 
-errorMessage=Mensaxe\:
+errorMessage = Mensaxe\:
 
-es=espa\u00f1ol
+es = espa\u00f1ol
 
-false_friend=Falso amigo
+false_friend = Falso amigo
 
-false_friend_desc=Nota referente aos falsos amigos\:
+false_friend_desc = Nota referente aos falsos amigos\:
 
-false_friend_hint=Consello\: "{0}" ({1}) significa {2} ({3}).
+false_friend_hint = Consello\: "{0}" ({1}) significa {2} ({3}).
 
-false_friend_suggestion=Quer\u00eda vostede dicir {0}?
+false_friend_suggestion = Quer\u00eda vostede dicir {0}?
 
-fr=franc\u00e9s
+fr = franc\u00e9s
 
-gl=galego
+gl = galego
 
 guiAddButton=Engadir...
-guiCancelButton=Cancelar
+guiCancelButton = Cancelar
 
-guiCheckComplete=Completouse a correcci\u00f3n de LanguageTool.
+guiCheckComplete = Completouse a correcci\u00f3n de LanguageTool.
 guiCloseButton=Pechar
 
-guiConfigWindowTitle=Opci\u00f3ns de LanguageTool
+guiConfigWindowTitle = Opci\u00f3ns de LanguageTool
 
-guiDemoText=Esta vai a ser unha mostra de de exemplo para amosar  o funcionamento de LanguageTool. Por\u00e9n, te\u00f1a en conta que non incl\u00fae un corretor de ortografia.
+guiDemoText = Esta vai a ser unha mostra de de exemplo para amosar  o funcionamento de LanguageTool. Por\u00e9n, te\u00f1a en conta que non incl\u00fae un corretor de ortografia.
 guiLanguageManagerDialog=M\u00f3dulo de xesti\u00f3n de regras
 
-guiMatchCount=Erros potenciais\:
+guiMatchCount = Erros potenciais\:
 
-guiMenuAbout=&Acerca de...
+guiMenuAbout = &Acerca de...
 
-guiMenuAddRules=Cargar ficheiro de &regras
+guiMenuAddRules = Cargar ficheiro de &regras
 
-guiMenuCheckClipboard=&Corrixir texto do portaretallos
+guiMenuCheckClipboard = &Corrixir texto do portaretallos
 
-guiMenuFile=&Ficheiro
+guiMenuFile = &Ficheiro
 
-guiMenuHelp=A&xuda
+guiMenuHelp = A&xuda
 
-guiMenuHide=&Minimizar \u00e1 bandexa do sistema
+guiMenuHide = &Minimizar \u00e1 bandexa do sistema
 
-guiMenuOpen=A&brir...
+guiMenuOpen = A&brir...
 
-guiMenuOptions=Opci\u00f3n&s...
+guiMenuOptions = Opci\u00f3n&s...
 
-guiMenuQuit=Sa\u00ed&r
+guiMenuQuit = Sa\u00ed&r
 
-guiMenuShowMainWindow=Abrir fiestra principal
+guiMenuShowMainWindow = Abrir fiestra principal
 
-guiMotherTongue=A s\u00faa lingua materna\:
+guiMotherTongue = A s\u00faa lingua materna\:
 
-guiNoErrorsFound=Non se atoparon erros nin advertencias (lingua\: {0})
+guiNoErrorsFound = Non se atoparon erros nin advertencias (lingua\: {0})
 
-guiNoErrorsFoundSelectedText=Non se atoparon erros ou advertencias no texto seleccionado (lingua\: {0})
+guiNoErrorsFoundSelectedText = Non se atoparon erros ou advertencias no texto seleccionado (lingua\: {0})
 
-guiOKButton=&Aceptar
+guiOKButton = &Aceptar
 
-guiOOoChangeButton=&Cambiar
+guiOOoChangeButton = &Cambiar
 
-guiOOoCloseButton=Pechar
+guiOOoCloseButton = Pechar
 
-guiOOoIgnoreAllButton=Ignorar todos
+guiOOoIgnoreAllButton = Ignorar todos
 
-guiOOoIgnoreButton=Ignorar
+guiOOoIgnoreButton = Ignorar
 
-guiOOoOptionsButton=Opci\u00f3ns...
+guiOOoOptionsButton = Opci\u00f3ns...
 
-guiProgressWindowTitle=LanguageTool\: Comprobaci\u00f3n do texto...
+guiProgressWindowTitle = LanguageTool\: comprobaci\u00f3n do texto...
 
 guiRemoveButton=Eliminar
-guiReplaceWindowTitle=Substitu\u00edr o texto
+guiReplaceWindowTitle = Substitu\u00edr o texto
 
-guiReplaceWithOtherText=<outro texto>
+guiReplaceWithOtherText = <outro texto>
 
-guiRunOnPort=Executar como servidor no por&to
+guiRunOnPort = Executar como servidor no por&to
 
-guiSelectionCheckComplete=LanguageTool completou a correcci\u00f3n do texto seleccionado.
+guiSelectionCheckComplete = LanguageTool completou a correcci\u00f3n do texto seleccionado.
 
-guiTagText=Etiquetar o texto
+guiTagText = Etiquetar o texto
 
-incorrect_case=Esta oraci\u00f3n non comeza cunha letra mai\u00fascula
+incorrect_case = Esta oraci\u00f3n non comeza cunha letra mai\u00fascula
 
-is=island\u00e9s
+is = island\u00e9s
 
-it=italiano
+it = italiano
 
-km=khmer
+km = khmer
 
-lt=lituano
+lt = lituano
 
-missing_space_after_comma=Po\u00f1a un espazo detr\u00e1s da coma
+missing_space_after_comma = Po\u00f1a un espazo detr\u00e1s da coma
 
-ml=malaiala
+ml = malaiala
 
-nl=holand\u00e9s
+nl = holand\u00e9s
 
-no_space_after=Non debe usar espazos detr\u00e1s dos par\u00e9nteses de apertura
+no_space_after = Non debe usar espazos detr\u00e1s dos par\u00e9nteses de apertura
 
-no_space_before=Non debe usar espazos antes dos par\u00e9nteses de peche
+no_space_before = Non debe usar espazos antes dos par\u00e9nteses de peche
 
-no_space_before_dot=Non debe po\u00c3\u00b1er espazos antes dun punto.
+no_space_before_dot = Non debe po\u00f1er espazos antes dun punto.
 
-pl=polaco
+pl = polaco
 
-repetition=Pos\u00edbel erro tipogr\u00e1fico\: repet\u00edu unha palabra
+repetition = Pos\u00edbel erro tipogr\u00e1fico\: repetiu unha palabra
 
-result1=<br><b> {0}. Li\u00f1a {1}, columna {2}</b><br>
+result1 = <br><b> {0}. Li\u00f1a {1}, columna {2}</b><br>
 
-resultAreaText=Os resultados aparecer\u00e1n aqu\u00ed
+resultAreaText = Os resultados aparecer\u00e1n aqu\u00ed
 
-resultTime=<br>Tempo\: {0}ms (inclu\u00edndo {1}ms na coincidencia de regras)<br>
+resultTime = <br>Tempo\: {0}ms (inclu\u00edndo {1}ms na coincidencia de regras)<br>
 
-ru=ruso
+ru = ruso
 
-sk=eslovaco
+sk = eslovaco
 
-sl=esloveno
+sl = esloveno
 
-space_after_comma=Po\u00f1a un espazo en branco despois da coma, pero nunca antes
+space_after_comma = Po\u00f1a un espazo en branco despois da coma, pero nunca antes
 
-startChecking=Inicio da verificaci\u00f3n en {0}
+startChecking = Inicio da verificaci\u00f3n en {0}
 
-sv=sueco
+sv = sueco
 
-tl=tagalo
+tl = tagalo
 
-textLanguage=Lingua do texto\:
+textLanguage = Lingua do texto\:
 
-two_commas=D\u00faas comas consecutivas
+two_commas = D\u00faas comas consecutivas
 
-two_dots=Dous puntos consecutivos
+two_dots = Dous puntos consecutivos
 
-uk=ucra\u00edno
+uk = ucra\u00edno
 
-unpaired_brackets=Par\u00e9nteses ou s\u00edmbolos similares desemparellados
+unpaired_brackets = Par\u00e9nteses ou s\u00edmbolos similares desemparellados
 
-whitespace_repetition=Pos\u00edbel erro tipogr\u00e1fico\: repet\u00edu un espazo en branco
+whitespace_repetition = Pos\u00edbel erro tipogr\u00e1fico\: repet\u00edu un espazo en branco
 
-ro=roman\u00e9s
+ro = roman\u00e9s
 
-zh=chin\u00e9s
+zh = chin\u00e9s
 
