--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_is.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_is.properties
@@ -1,206 +1,205 @@
-#X-Generator: crowdin.net
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd=Automatically detect language
+atd = Automatically detect language
 
-ast=Asturian
+ast = Asturian
 
-be=Belarusian
+be = Belarusian
 
 br = Breton
 
-ca=Catalan
+ca = Catalan
 
-category_case=H\u00e1stafur/l\u00e1gstafur
+category_case = H\u00e1stafur/l\u00e1gstafur
 
-category_false_friend=Falskir vinir
+category_false_friend = Falskir vinir
 
-category_grammar=M\u00e1lfr\u00e6\u00f0i
+category_grammar = M\u00e1lfr\u00e6\u00f0i
 
-category_misc=\u00ddmislegt
+category_misc = \u00ddmislegt
 
-category_typo=Hugsanleg ritvilla
+category_typo = Hugsanleg ritvilla
 
-checkDone=Yfirlestri loki\u00f0, {0} hugsanlegar villur fundust
+checkDone = Yfirlestri loki\u00f0, {0} hugsanlegar villur fundust
 
-checkText=&Yfirlestur
+checkText = &Yfirlestur
 
-correctionMessage=Lei\u00f0r\u00e9tting\:
+correctionMessage = Lei\u00f0r\u00e9tting\:
 
-cs=t\u00e9kkneska
+cs = t\u00e9kkneska
 
-da=Danish
+da = Danish
 
-de=\u00fe\u00fdska
+de = \u00fe\u00fdska
 
-desc_comma_whitespace=Bil \u00e1 undan kommu og \u00e1 undan/eftir sviga
+desc_comma_whitespace = Bil \u00e1 undan kommu og \u00e1 undan/eftir sviga
 
-desc_double_punct=Tv\u00edtekinn punktur e\u00f0a komma
+desc_double_punct = Tv\u00edtekinn punktur e\u00f0a komma
 
-desc_repetition=Endurteki\u00f0 or\u00f0 (t.d. 'mun mun')
+desc_repetition = Endurteki\u00f0 or\u00f0 (t.d. 'mun mun')
 
-desc_repetition_short=Endurteki\u00f0 or\u00f0
+desc_repetition_short = Endurteki\u00f0 or\u00f0
 
-desc_unpaired_brackets=Svigar, hornklofar e\u00f0a \u00f6nnur greinarmerki standast ekki \u00e1
+desc_unpaired_brackets = Svigar, hornklofar e\u00f0a \u00f6nnur greinarmerki standast ekki \u00e1
 
-desc_uppercase_sentence=Athuga hvort setning hefst \u00e1 st\u00f3rum staf
+desc_uppercase_sentence = Athuga hvort setning hefst \u00e1 st\u00f3rum staf
 
-desc_whitespacerepetition=Tv\u00f6falt bil (galli \u00e1 uppsetningu)
+desc_whitespacerepetition = Tv\u00f6falt bil (galli \u00e1 uppsetningu)
 
-double_dots_short=Tveir punktar \u00ed r\u00f6\u00f0
+double_dots_short = Tveir punktar \u00ed r\u00f6\u00f0
 
-double_commas_short=Tv\u00e6r kommur \u00ed r\u00f6\u00f0
+double_commas_short = Tv\u00e6r kommur \u00ed r\u00f6\u00f0
 
-en=enska
+en = enska
 
-enterText=Skrifa\u00f0u e\u00f0a l\u00edmdu texta til a\u00f0 lesa yfir \u00ed efsta reitinn
+enterText = Skrifa\u00f0u e\u00f0a l\u00edmdu texta til a\u00f0 lesa yfir \u00ed efsta reitinn
 
-enterText2=Settu texta inn h\u00e9r
+enterText2 = Settu texta inn h\u00e9r
 
-eo=Esperanto
+eo = Esperanto
 
-errorContext=Samhengi\:
+errorContext = Samhengi\:
 
-errorMessage=Skilabo\u00f0\:
+errorMessage = Skilabo\u00f0\:
 
-es=sp\u00e6nska
+es = sp\u00e6nska
 
-false_friend=Falskur vinur
+false_friend = Falskur vinur
 
-false_friend_desc=\u00c1bending um falskan vin\:
+false_friend_desc = \u00c1bending um falskan vin\:
 
-false_friend_hint=Athuga\u00f0u\: "{0}" ({1}) merkir {2} ({3}).
+false_friend_hint = Athuga\u00f0u\: "{0}" ({1}) merkir {2} ({3}).
 
-false_friend_suggestion=\u00c1ttir\u00f0u vi\u00f0 {0}?
+false_friend_suggestion = \u00c1ttir\u00f0u vi\u00f0 {0}?
 
-fr=franska
+fr = franska
 
-gl=Galician
+gl = Galician
 
 guiAddButton=Add...
-guiCancelButton=H\u00e6tta vi\u00f0
+guiCancelButton = H\u00e6tta vi\u00f0
 
-guiCheckComplete=LanguageTool yfirlestri er loki\u00f0.
+guiCheckComplete = LanguageTool yfirlestri er loki\u00f0.
 guiCloseButton=Close
 
-guiConfigWindowTitle=LanguageTool valkostir
+guiConfigWindowTitle = LanguageTool valkostir
 
-guiDemoText=\u00deetta er d\u00e6mi um texta sem \u00e1 a\u00f0 s\u00edna farm \u00e1 hvernig LanguageTool virkar. \u00dea\u00f0 er \u00fe\u00f3 h\u00e9rme\u00f0 gert lj\u00f3st a\u00f0 forriti\u00f0 framkv\u00e6mir ekki hef\u00f0bundna ritvilluleit.
+guiDemoText = \u00deetta er d\u00e6mi um texta sem \u00e1 a\u00f0 s\u00edna farm \u00e1 hvernig LanguageTool virkar. \u00dea\u00f0 er \u00fe\u00f3 h\u00e9rme\u00f0 gert lj\u00f3st a\u00f0 forriti\u00f0 framkv\u00e6mir ekki hef\u00f0bundna ritvilluleit.
 guiLanguageManagerDialog=Language Module Manager
 
-guiMatchCount=Hugsanlegar villur\:
+guiMatchCount = Hugsanlegar villur\:
 
-guiMenuAbout=&Um...
+guiMenuAbout = &Um...
 
-guiMenuAddRules=Hla\u00f0a inn &reglum
+guiMenuAddRules = Hla\u00f0a inn &reglum
 
-guiMenuCheckClipboard=&Yfirlesa texta \u00e1 klemmuspjaldi
+guiMenuCheckClipboard = &Yfirlesa texta \u00e1 klemmuspjaldi
 
-guiMenuFile=&Skr\u00e1
+guiMenuFile = &Skr\u00e1
 
-guiMenuHelp=&Hj\u00e1lp
+guiMenuHelp = &Hj\u00e1lp
 
-guiMenuHide=&Fela \u00e1 t\u00e6kjasl\u00e1
+guiMenuHide = &Fela \u00e1 t\u00e6kjasl\u00e1
 
-guiMenuOpen=&Opna...
+guiMenuOpen = &Opna...
 
-guiMenuOptions=&Valkostir...
+guiMenuOptions = &Valkostir...
 
-guiMenuQuit=&Loka
+guiMenuQuit = &Loka
 
-guiMenuShowMainWindow=Opna a\u00f0alglugga
+guiMenuShowMainWindow = Opna a\u00f0alglugga
 
-guiMotherTongue=\u00deitt m\u00f3\u00f0urm\u00e1l\:
+guiMotherTongue = \u00deitt m\u00f3\u00f0urm\u00e1l\:
 
-guiNoErrorsFound=Engar villur fundust (tungum\u00e1l\: {0})
+guiNoErrorsFound = Engar villur fundust (tungum\u00e1l\: {0})
 
-guiNoErrorsFoundSelectedText=Engar villur fundust \u00ed v\u00f6ldum texta (tungum\u00e1l\: {0})
+guiNoErrorsFoundSelectedText = Engar villur fundust \u00ed v\u00f6ldum texta (tungum\u00e1l\: {0})
 
-guiOKButton=&\u00cd lagi
+guiOKButton = &\u00cd lagi
 
-guiOOoChangeButton=&Breyta
+guiOOoChangeButton = &Breyta
 
-guiOOoCloseButton=Loka
+guiOOoCloseButton = Loka
 
-guiOOoIgnoreAllButton=Sleppa \u00f6llu 
+guiOOoIgnoreAllButton = Sleppa \u00f6llu
 
-guiOOoIgnoreButton=Sleppa
+guiOOoIgnoreButton = Sleppa
 
-guiOOoOptionsButton=Valkostir...
+guiOOoOptionsButton = Valkostir...
 
-guiProgressWindowTitle=LanguageTool\: Les yfir texta...
+guiProgressWindowTitle = LanguageTool\: Les yfir texta...
 
 guiRemoveButton=Remove
-guiReplaceWindowTitle=Skipta \u00fat texta 
+guiReplaceWindowTitle = Skipta \u00fat texta
 
-guiReplaceWithOtherText=<annar texti>
+guiReplaceWithOtherText = <annar texti>
 
-guiRunOnPort=Keyra \u00fej\u00f3n \u00e1 netg\u00e1tt nr.
+guiRunOnPort = Keyra \u00fej\u00f3n \u00e1 netg\u00e1tt nr.
 
-guiSelectionCheckComplete=LanguageTool hefur loki\u00f0 yfirlestri.
+guiSelectionCheckComplete = LanguageTool hefur loki\u00f0 yfirlestri.
 
-guiTagText=&Tag Text
+guiTagText = &Tag Text
 
-incorrect_case=\u00deessi setning hefst ekki \u00e1 h\u00e1staf
+incorrect_case = \u00deessi setning hefst ekki \u00e1 h\u00e1staf
 
-is=Icelandic
+is = Icelandic
 
-it=\u00edtalska
+it = \u00edtalska
 
-km=Khmer
+km = Khmer
 
-lt=lith\u00e1\u00edska
+lt = lith\u00e1\u00edska
 
-missing_space_after_comma=Bil vantar \u00e1 eftir kommu
+missing_space_after_comma = Bil vantar \u00e1 eftir kommu
 
-ml=Malayalam
+ml = Malayalam
 
-nl=hollenska
+nl = hollenska
 
-no_space_after=Ekki setja bil eftir a\u00f0 svigi er opna\u00f0ur
+no_space_after = Ekki setja bil eftir a\u00f0 svigi er opna\u00f0ur
 
-no_space_before=Ekki setja bil \u00e1\u00f0ur en sviga er loka\u00f0
+no_space_before = Ekki setja bil \u00e1\u00f0ur en sviga er loka\u00f0
 
-no_space_before_dot=Ekki setja bil \u00e1 undan punkti
+no_space_before_dot = Ekki setja bil \u00e1 undan punkti
 
-pl=p\u00f3lska
+pl = p\u00f3lska
 
-repetition=Hugsanleg ritvilla\: or\u00f0 endurteki\u00f0
+repetition = Hugsanleg ritvilla\: or\u00f0 endurteki\u00f0
 
-result1=<br><b> {0}. Line {1}, column {2}</b><br>
+result1 = <br><b> {0}. Line {1}, column {2}</b><br>
 
-resultAreaText=Ni\u00f0urst\u00f6\u00f0ur birtast h\u00e9r
+resultAreaText = Ni\u00f0urst\u00f6\u00f0ur birtast h\u00e9r
 
-resultTime=<br>Time\: {0}ms (including {1}ms for rule matching)<br>
+resultTime = <br>Time\: {0}ms (including {1}ms for rule matching)<br>
 
-ru=r\u00fassneska
+ru = r\u00fassneska
 
-sk=Slovak
+sk = Slovak
 
-sl=sl\u00f3venska
+sl = sl\u00f3venska
 
-space_after_comma=Bil skal vera \u00e1 eftir kommu, ekki \u00e1 undan henni
+space_after_comma = Bil skal vera \u00e1 eftir kommu, ekki \u00e1 undan henni
 
-startChecking=Hef yfirlestur\: {0}
+startChecking = Hef yfirlestur\: {0}
 
-sv=s\u00e6nska
+sv = s\u00e6nska
 
-tl=Tagalog
+tl = Tagalog
 
-textLanguage=Tungum\u00e1l texta\:
+textLanguage = Tungum\u00e1l texta\:
 
-two_commas=Tv\u00e6r kommur \u00ed r\u00f6\u00f0
+two_commas = Tv\u00e6r kommur \u00ed r\u00f6\u00f0
 
-two_dots=Tveir punktar \u00ed r\u00f6\u00f0
+two_dots = Tveir punktar \u00ed r\u00f6\u00f0
 
-uk=\u00fakra\u00ednska
+uk = \u00fakra\u00ednska
 
-unpaired_brackets=Svigar (e\u00f0a svipu\u00f0 t\u00e1kn) standast ekki \u00e1
+unpaired_brackets = Svigar (e\u00f0a svipu\u00f0 t\u00e1kn) standast ekki \u00e1
 
-whitespace_repetition=Hugsanleg ritvilla\: endurteki\u00f0 bil
+whitespace_repetition = Hugsanleg ritvilla\: endurteki\u00f0 bil
 
-ro=Romanian
+ro = Romanian
 
-zh=Chinese
+zh = Chinese
 
