--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_it.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_it.properties
@@ -1,206 +1,205 @@
-#X-Generator: crowdin.net
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd=Automatically detect language
+atd = Automatically detect language
 
-ast=Asturian
+ast = Asturian
 
-be=Bielorusso
+be = Bielorusso
 
 br = Breton
 
-ca=Catalano
+ca = Catalano
 
-category_case=Uso delle maiuscole
+category_case = Uso delle maiuscole
 
-category_false_friend=Falsi amici
+category_false_friend = Falsi amici
 
-category_grammar=Grammatica
+category_grammar = Grammatica
 
-category_misc=Altre
+category_misc = Altre
 
-category_typo=Possibile errore di battitura
+category_typo = Possibile errore di battitura
 
-checkDone=Controllo completato, sono stati trovati {0} possibili errori
+checkDone = Controllo completato, sono stati trovati {0} possibili errori
 
-checkText=&Controlla Testo
+checkText = &Controlla Testo
 
-correctionMessage=Correzione\:
+correctionMessage = Correzione\:
 
-cs=Ceco
+cs = Ceco
 
-da=Danese
+da = Danese
 
-de=Tedesco
+de = Tedesco
 
-desc_comma_whitespace=Utilizzo dello spazio prima della virgola e prima/dopo le parentesi
+desc_comma_whitespace = Utilizzo dello spazio prima della virgola e prima/dopo le parentesi
 
-desc_double_punct=Doppia battitura di punti o di virgole
+desc_double_punct = Doppia battitura di punti o di virgole
 
-desc_repetition=Parola ripetuta (es. 'casa casa')
+desc_repetition = Parola ripetuta (es. 'casa casa')
 
-desc_repetition_short=Ripetizione
+desc_repetition_short = Ripetizione
 
-desc_unpaired_brackets=Non chiusura di parentesi, virgolette e altra punteggiatura simile
+desc_unpaired_brackets = Non chiusura di parentesi, virgolette e altra punteggiatura simile
 
-desc_uppercase_sentence=Controlla che la frase inizi con una maiuscola
+desc_uppercase_sentence = Controlla che la frase inizi con una maiuscola
 
-desc_whitespacerepetition=Ripetizione dello spazio (brutta formattazione)
+desc_whitespacerepetition = Ripetizione dello spazio (brutta formattazione)
 
-double_dots_short=Due punti consecutivi
+double_dots_short = Due punti consecutivi
 
-double_commas_short=Due virgole consecutive
+double_commas_short = Due virgole consecutive
 
-en=Inglese
+en = Inglese
 
-enterText=Si prega di scrivere o di incollare il testo da controllare nel campo in alto
+enterText = Si prega di scrivere o di incollare il testo da controllare nel campo in alto
 
-enterText2=Si prega di inserire il testo da controllare qui
+enterText2 = Si prega di inserire il testo da controllare qui
 
-eo=Esperanto
+eo = Esperanto
 
-errorContext=Contesto\:
+errorContext = Contesto\:
 
-errorMessage=Messaggio\:
+errorMessage = Messaggio\:
 
-es=Spagnolo
+es = Spagnolo
 
-false_friend=Falso amico
+false_friend = Falso amico
 
-false_friend_desc=suggerimento di falso amico per\:
+false_friend_desc = suggerimento di falso amico per\:
 
-false_friend_hint=Suggerimento\: "{0}" ({1}) significa {2} ({3}).
+false_friend_hint = Suggerimento\: "{0}" ({1}) significa {2} ({3}).
 
-false_friend_suggestion=Intendevi forse {0}?
+false_friend_suggestion = Intendevi forse {0}?
 
-fr=Francese
+fr = Francese
 
-gl=Galiziano
+gl = Galiziano
 
 guiAddButton=Add...
-guiCancelButton=Annulla
+guiCancelButton = Annulla
 
-guiCheckComplete=LanguageTool ha completato il controllo.
+guiCheckComplete = LanguageTool ha completato il controllo.
 guiCloseButton=Close
 
-guiConfigWindowTitle=Opzioni LanguageTool
+guiConfigWindowTitle = Opzioni LanguageTool
 
-guiDemoText=Questo \u010d un esempio di input per dimostrare il funzionamento di LanguageTool. Si noti, per\u0148, che non include il controllo ortografico.works.
+guiDemoText = Questo \u010d un esempio di input per dimostrare il funzionamento di LanguageTool. Si noti, per\u0148, che non include il controllo ortografico.works.
 guiLanguageManagerDialog=Language Module Manager
 
-guiMatchCount=Probabili errori\:
+guiMatchCount = Probabili errori\:
 
-guiMenuAbout=&Informazioni su...
+guiMenuAbout = &Informazioni su...
 
-guiMenuAddRules=Carica file delle &Regole
+guiMenuAddRules = Carica file delle &Regole
 
-guiMenuCheckClipboard=&Contolla il testo nella Clipboard
+guiMenuCheckClipboard = &Contolla il testo nella Clipboard
 
-guiMenuFile=&File
+guiMenuFile = &File
 
-guiMenuHelp=&Aiuto
+guiMenuHelp = &Aiuto
 
-guiMenuHide=&Minimizza nel System Tray
+guiMenuHide = &Minimizza nel System Tray
 
-guiMenuOpen=&Apri...
+guiMenuOpen = &Apri...
 
-guiMenuOptions=Opzio&ni...
+guiMenuOptions = Opzio&ni...
 
-guiMenuQuit=&Esci
+guiMenuQuit = &Esci
 
-guiMenuShowMainWindow=Apri la Finestra Principale
+guiMenuShowMainWindow = Apri la Finestra Principale
 
-guiMotherTongue=La tua lingua madre\:
+guiMotherTongue = La tua lingua madre\:
 
-guiNoErrorsFound=Niente da segnalare (linguaggio\: {0})
+guiNoErrorsFound = Niente da segnalare (linguaggio\: {0})
 
-guiNoErrorsFoundSelectedText=Niente da segnalare nel testo selezionato (linguaggio\: {0})
+guiNoErrorsFoundSelectedText = Niente da segnalare nel testo selezionato (linguaggio\: {0})
 
-guiOKButton=&OK
+guiOKButton = &OK
 
-guiOOoChangeButton=&Cambia
+guiOOoChangeButton = &Cambia
 
-guiOOoCloseButton=Chiudi
+guiOOoCloseButton = Chiudi
 
-guiOOoIgnoreAllButton=Ignora Tutti
+guiOOoIgnoreAllButton = Ignora Tutti
 
-guiOOoIgnoreButton=Ignora
+guiOOoIgnoreButton = Ignora
 
-guiOOoOptionsButton=Opzioni...
+guiOOoOptionsButton = Opzioni...
 
-guiProgressWindowTitle=LanguageTool\: Controllo in corso...
+guiProgressWindowTitle = LanguageTool\: Controllo in corso...
 
 guiRemoveButton=Remove
-guiReplaceWindowTitle=Rimpiazza il testo
+guiReplaceWindowTitle = Rimpiazza il testo
 
-guiReplaceWithOtherText=<altro testo>
+guiReplaceWithOtherText = <altro testo>
 
-guiRunOnPort=Esegui come server sulla po&rta
+guiRunOnPort = Esegui come server sulla po&rta
 
-guiSelectionCheckComplete=Il controllo LanguageTool del testo selezionato \u010d completo.
+guiSelectionCheckComplete = Il controllo LanguageTool del testo selezionato \u010d completo.
 
-guiTagText=&Tag Text
+guiTagText = &Tag Text
 
-incorrect_case=Questa frase non inizia con una maiuscola
+incorrect_case = Questa frase non inizia con una maiuscola
 
-is=Islandese
+is = Islandese
 
-it=Italiano
+it = Italiano
 
-km=Khmer
+km = Khmer
 
-lt=Lituano
+lt = Lituano
 
-missing_space_after_comma=Inserire uno spazio dopo la virgola
+missing_space_after_comma = Inserire uno spazio dopo la virgola
 
-ml=Malayalam
+ml = Malayalam
 
-nl=Olandese
+nl = Olandese
 
-no_space_after=Non inserire lo spazio dopo l'apertura di parentesi
+no_space_after = Non inserire lo spazio dopo l'apertura di parentesi
 
-no_space_before=Non inserire lo spazio dopo la chiusura di parentesi
+no_space_before = Non inserire lo spazio dopo la chiusura di parentesi
 
-no_space_before_dot=Non inserire lo spazio dopo il punto a capo
+no_space_before_dot = Non inserire lo spazio dopo il punto a capo
 
-pl=Polacco
+pl = Polacco
 
-repetition=Possibile errore di battitura\: parola ripetuta
+repetition = Possibile errore di battitura\: parola ripetuta
 
-result1=<br><b> {0}. Line {1}, column {2}</b><br>
+result1 = <br><b> {0}. Line {1}, column {2}</b><br>
 
-resultAreaText=I rusultati appariranno qui
+resultAreaText = I rusultati appariranno qui
 
-resultTime=<br>Time\: {0}ms (including {1}ms for rule matching)<br>
+resultTime = <br>Time\: {0}ms (including {1}ms for rule matching)<br>
 
-ru=Russo
+ru = Russo
 
-sk=Slovacco
+sk = Slovacco
 
-sl=Sloveno
+sl = Sloveno
 
-space_after_comma=Inserire lo spazio dopo la virgola e non prima
+space_after_comma = Inserire lo spazio dopo la virgola e non prima
 
-startChecking=Inizio controllo a {0}
+startChecking = Inizio controllo a {0}
 
-sv=Svedese
+sv = Svedese
 
-tl=Tagalog
+tl = Tagalog
 
-textLanguage=Linguaggio del testo\:
+textLanguage = Linguaggio del testo\:
 
-two_commas=Due virgole consecutive
+two_commas = Due virgole consecutive
 
-two_dots=Due punti consecutivi
+two_dots = Due punti consecutivi
 
-uk=Ucraino
+uk = Ucraino
 
-unpaired_brackets=Non chiusura di parentesi o di simboli simili
+unpaired_brackets = Non chiusura di parentesi o di simboli simili
 
-whitespace_repetition=Probabile errore\: ripetizione di spazio
+whitespace_repetition = Probabile errore\: ripetizione di spazio
 
-ro=Rumeno
+ro = Rumeno
 
-zh=Chinese
+zh = Chinese
 
