--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_lt.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_lt.properties
@@ -1,206 +1,205 @@
-#X-Generator: crowdin.net
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd=Automatically detect language
+atd = Automatically detect language
 
-ast=Asturian
+ast = Asturian
 
-be=Baltarusi\u0173
+be = Baltarusi\u0173
 
 br = Breton
 
-ca=Katalon\u0173
+ca = Katalon\u0173
 
-category_case=Did\u017eiosios/ma\u017eosios raid\u0117s
+category_case = Did\u017eiosios/ma\u017eosios raid\u0117s
 
-category_false_friend=Netikras draugas
+category_false_friend = Netikras draugas
 
-category_grammar=Gramatika
+category_grammar = Gramatika
 
-category_misc=Kiti
+category_misc = Kiti
 
-category_typo=Possible Typo
+category_typo = Possible Typo
 
-checkDone=Tikrinimas baigtas, rasta galim\u0173 klaid\u0173\: {0}
+checkDone = Tikrinimas baigtas, rasta galim\u0173 klaid\u0173\: {0}
 
-checkText=Tikrinti tekst\u0105
+checkText = Tikrinti tekst\u0105
 
-correctionMessage=Correction\:
+correctionMessage = Correction\:
 
-cs=\u010dek\u0173
+cs = \u010dek\u0173
 
-da=Dan\u0173
+da = Dan\u0173
 
-de=vokie\u010di\u0173
+de = vokie\u010di\u0173
 
-desc_comma_whitespace=Tarp\u0173 naudojimas prie\u0161/po kablel\u012f bei skliaustelius
+desc_comma_whitespace = Tarp\u0173 naudojimas prie\u0161/po kablel\u012f bei skliaustelius
 
-desc_double_punct=Ar n\u0117ra dviej\u0173 pasikartojan\u010di\u0173 ta\u0161k\u0173 ar kableli\u0173
+desc_double_punct = Ar n\u0117ra dviej\u0173 pasikartojan\u010di\u0173 ta\u0161k\u0173 ar kableli\u0173
 
-desc_repetition=Pasikartojantys \u017eod\u017eiai (pvz. "ar ar")
+desc_repetition = Pasikartojantys \u017eod\u017eiai (pvz. "ar ar")
 
-desc_repetition_short=Word repetition
+desc_repetition_short = Word repetition
 
-desc_unpaired_brackets=Unpaired braces, brackets, quotation marks and similar symbols
+desc_unpaired_brackets = Unpaired braces, brackets, quotation marks and similar symbols
 
-desc_uppercase_sentence=Tikrinti ar sakinys prasideda i\u0161 did\u017eiosios raid\u0117s
+desc_uppercase_sentence = Tikrinti ar sakinys prasideda i\u0161 did\u017eiosios raid\u0117s
 
-desc_whitespacerepetition=Whitespace repetition (bad formatting)
+desc_whitespacerepetition = Whitespace repetition (bad formatting)
 
-double_dots_short=Two consecutive dots
+double_dots_short = Two consecutive dots
 
-double_commas_short=Two consecutive comma
+double_commas_short = Two consecutive comma
 
-en=angl\u0173
+en = angl\u0173
 
-enterText=Tikrinimui skirt\u0105 tekst\u0105 ra\u0161ykite arba \u012fd\u0117kite vir\u0161uje
+enterText = Tikrinimui skirt\u0105 tekst\u0105 ra\u0161ykite arba \u012fd\u0117kite vir\u0161uje
 
-enterText2=\u010cia para\u0161ykite arba \u012fd\u0117kite tikrinimui skirt\u0105 tekst\u0105
+enterText2 = \u010cia para\u0161ykite arba \u012fd\u0117kite tikrinimui skirt\u0105 tekst\u0105
 
-eo=Esperanto
+eo = Esperanto
 
-errorContext=Tekstas\:
+errorContext = Tekstas\:
 
-errorMessage=Klaida\:
+errorMessage = Klaida\:
 
-es=ispan\u0173
+es = ispan\u0173
 
-false_friend=False friend
+false_friend = False friend
 
-false_friend_desc=netikras draugas\:
+false_friend_desc = netikras draugas\:
 
-false_friend_hint=Hint\: "{0}" ({1}) means {2} ({3}).
+false_friend_hint = Hint\: "{0}" ({1}) means {2} ({3}).
 
-false_friend_suggestion=Did you mean {0}?
+false_friend_suggestion = Did you mean {0}?
 
-fr=pranc\u016bz\u0173
+fr = pranc\u016bz\u0173
 
-gl=Galician
+gl = Galician
 
 guiAddButton=Add...
-guiCancelButton=At\u0161aukti
+guiCancelButton = At\u0161aukti
 
-guiCheckComplete=Gramatikos tikrinimas baigtas.
+guiCheckComplete = Gramatikos tikrinimas baigtas.
 guiCloseButton=Close
 
-guiConfigWindowTitle=Gramatikos \u012frankio nustatymai
+guiConfigWindowTitle = Gramatikos \u012frankio nustatymai
 
-guiDemoText=\u010dia yra pavyzdinis tekstas gramatikos tikrinimui tikrinimui. Atsiminkite , kad \u017eod\u017ei\u0173 ra\u0161yba netikrynama.
+guiDemoText = \u010dia yra pavyzdinis tekstas gramatikos tikrinimui tikrinimui. Atsiminkite , kad \u017eod\u017ei\u0173 ra\u0161yba netikrynama.
 guiLanguageManagerDialog=Language Module Manager
 
-guiMatchCount=Rasta galim\u0173 klaid\u0173\:
+guiMatchCount = Rasta galim\u0173 klaid\u0173\:
 
-guiMenuAbout=Apie...
+guiMenuAbout = Apie...
 
-guiMenuAddRules=Load Rule File
+guiMenuAddRules = Load Rule File
 
-guiMenuCheckClipboard=Tikrinti nukopijuot\u0105 tekst\u0105 i\u0161karpin\u0117je
+guiMenuCheckClipboard = Tikrinti nukopijuot\u0105 tekst\u0105 i\u0161karpin\u0117je
 
-guiMenuFile=Failas
+guiMenuFile = Failas
 
-guiMenuHelp=Pagalba
+guiMenuHelp = Pagalba
 
-guiMenuHide=Pasl\u0117pti sistemos prane\u0161im\u0173 vietoje
+guiMenuHide = Pasl\u0117pti sistemos prane\u0161im\u0173 vietoje
 
-guiMenuOpen=Atverti...
+guiMenuOpen = Atverti...
 
-guiMenuOptions=Nustatymai...
+guiMenuOptions = Nustatymai...
 
-guiMenuQuit=I\u0161eiti
+guiMenuQuit = I\u0161eiti
 
-guiMenuShowMainWindow=Open main window
+guiMenuShowMainWindow = Open main window
 
-guiMotherTongue=Gimtoji kalba\:
+guiMotherTongue = Gimtoji kalba\:
 
-guiNoErrorsFound=Klaid\u0173 nerasta (teksto kalba\: {0})
+guiNoErrorsFound = Klaid\u0173 nerasta (teksto kalba\: {0})
 
-guiNoErrorsFoundSelectedText=Pa\u017eym\u0117tame tekste klaid\u0173 nerasta (teksto kalba\: {0})
+guiNoErrorsFoundSelectedText = Pa\u017eym\u0117tame tekste klaid\u0173 nerasta (teksto kalba\: {0})
 
-guiOKButton=Gerai
+guiOKButton = Gerai
 
-guiOOoChangeButton=Pakeisti
+guiOOoChangeButton = Pakeisti
 
-guiOOoCloseButton=U\u017edaryti
+guiOOoCloseButton = U\u017edaryti
 
-guiOOoIgnoreAllButton=Nepaisyti visur
+guiOOoIgnoreAllButton = Nepaisyti visur
 
-guiOOoIgnoreButton=Nepaisyti
+guiOOoIgnoreButton = Nepaisyti
 
-guiOOoOptionsButton=Nustatymai...
+guiOOoOptionsButton = Nustatymai...
 
-guiProgressWindowTitle=Gramatika\: Tikrinamas tekstas...
+guiProgressWindowTitle = Gramatika\: Tikrinamas tekstas...
 
 guiRemoveButton=Remove
-guiReplaceWindowTitle=Pakeisti tekst\u0105
+guiReplaceWindowTitle = Pakeisti tekst\u0105
 
-guiReplaceWithOtherText=<kitas tekstas>
+guiReplaceWithOtherText = <kitas tekstas>
 
-guiRunOnPort=Paleisti tikrinimo server\u012f, prievadas\:
+guiRunOnPort = Paleisti tikrinimo server\u012f, prievadas\:
 
-guiSelectionCheckComplete=Pa\u017eym\u0117to teksto gramatikos tikrinimas baigtas.
+guiSelectionCheckComplete = Pa\u017eym\u0117to teksto gramatikos tikrinimas baigtas.
 
-guiTagText=&Tag Text
+guiTagText = &Tag Text
 
-incorrect_case=Sakinys turi prasid\u0117ti i\u0161 did\u017eiosios raid\u0117s
+incorrect_case = Sakinys turi prasid\u0117ti i\u0161 did\u017eiosios raid\u0117s
 
-is=island\u0173
+is = island\u0173
 
-it=ital\u0173
+it = ital\u0173
 
-km=Khmer
+km = Khmer
 
-lt=lietuvi\u0173
+lt = lietuvi\u0173
 
-missing_space_after_comma=Po kablelio reikia pad\u0117ti tarp\u0105
+missing_space_after_comma = Po kablelio reikia pad\u0117ti tarp\u0105
 
-ml=Malajalam\u0173
+ml = Malajalam\u0173
 
-nl=oland\u0173
+nl = oland\u0173
 
-no_space_after=Nereikia d\u0117ti tarpo po atidaran\u010dio skliaustelio
+no_space_after = Nereikia d\u0117ti tarpo po atidaran\u010dio skliaustelio
 
-no_space_before=Nereikia d\u0117ti tarpo prie\u0161 u\u017edarant\u012f skliaustel\u012f
+no_space_before = Nereikia d\u0117ti tarpo prie\u0161 u\u017edarant\u012f skliaustel\u012f
 
-no_space_before_dot=Don't put a space before the full stop
+no_space_before_dot = Don't put a space before the full stop
 
-pl=lenk\u0173
+pl = lenk\u0173
 
-repetition=Possible typo\: you repeated a word
+repetition = Possible typo\: you repeated a word
 
-result1=<br><b> {0}. Line {1}, column {2}</b><br>
+result1 = <br><b> {0}. Line {1}, column {2}</b><br>
 
-resultAreaText=Rezultatai bus pateikti \u010dia
+resultAreaText = Rezultatai bus pateikti \u010dia
 
-resultTime=<br>Time\: {0}ms (including {1}ms for rule matching)<br>
+resultTime = <br>Time\: {0}ms (including {1}ms for rule matching)<br>
 
-ru=rus\u0173
+ru = rus\u0173
 
-sk=slovak\u0173
+sk = slovak\u0173
 
-sl=Slovenian
+sl = Slovenian
 
-space_after_comma=Tarp\u0105 reikia d\u0117ti po kablelio, o ne prie\u0161 j\u012f
+space_after_comma = Tarp\u0105 reikia d\u0117ti po kablelio, o ne prie\u0161 j\u012f
 
-startChecking=Pradedamas tikrinimas kalbai\: {0}
+startChecking = Pradedamas tikrinimas kalbai\: {0}
 
-sv=\u0161ved\u0173
+sv = \u0161ved\u0173
 
-tl=Tagalog
+tl = Tagalog
 
-textLanguage=Teksto kalba\:
+textLanguage = Teksto kalba\:
 
-two_commas=Du pasikartojantys kableliai
+two_commas = Du pasikartojantys kableliai
 
-two_dots=Du pasikartojantys ta\u0161kai
+two_dots = Du pasikartojantys ta\u0161kai
 
-uk=ukrainie\u010di\u0173
+uk = ukrainie\u010di\u0173
 
-unpaired_brackets=Unpaired bracket or similar symbol
+unpaired_brackets = Unpaired bracket or similar symbol
 
-whitespace_repetition=Possible typo\: you repeated a whitespace
+whitespace_repetition = Possible typo\: you repeated a whitespace
 
-ro=Rom\u00e2n\u0103
+ro = Rom\u00e2n\u0103
 
-zh=Chinese
+zh = Chinese
 
