--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_tl.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_tl.properties
@@ -25,7 +25,7 @@ checkDone = Check done, {0} potential problems found
 
 checkText = &Check Text
 
-correctionMessage = Correction:
+correctionMessage = Correction\:
 
 cs = Czech
 
@@ -59,17 +59,17 @@ enterText2 = Please insert text to check here
 
 eo = Esperanto
 
-errorContext = Context:
+errorContext = Context\:
 
-errorMessage = Message:
+errorMessage = Message\:
 
 es = Spanish
 
 false_friend = False friend
 
-false_friend_desc = false friend hint for:
+false_friend_desc = false friend hint for\:
 
-false_friend_hint = Hint: "{0}" ({1}) means {2} ({3}).
+false_friend_hint = Hint\: "{0}" ({1}) means {2} ({3}).
 
 false_friend_suggestion = Did you mean {0}?
 
@@ -85,10 +85,10 @@ guiCloseButton=Close
 
 guiConfigWindowTitle = LanguageTool Options
 
-guiDemoText = This is a example input to to show you how LanguageTool works. Note, however, that it does not include a spell checka.
+guiDemoText = Ang LanguageTool ay maganda gamit sa araw-araw. Ang talatang ito ay halimbawa kung paano  dito gamitin ang LanguageTool. Litaw sa pangungusap ding na ito na may mga bagaybagay na hindii pa kayang itama nang LanguageTool.
 guiLanguageManagerDialog=Language Module Manager
 
-guiMatchCount = Potential errors:
+guiMatchCount = Potential errors\:
 
 guiMenuAbout = &About...
 
@@ -110,11 +110,11 @@ guiMenuQuit = &Quit
 
 guiMenuShowMainWindow = Open Main Window
 
-guiMotherTongue = Your mother tongue:
+guiMotherTongue = Your mother tongue\:
 
-guiNoErrorsFound = No errors or warnings found (language: {0})
+guiNoErrorsFound = No errors or warnings found (language\: {0})
 
-guiNoErrorsFoundSelectedText = No errors or warnings found in selected text (language: {0})
+guiNoErrorsFoundSelectedText = No errors or warnings found in selected text (language\: {0})
 
 guiOKButton = &OK
 
@@ -128,7 +128,7 @@ guiOOoIgnoreButton = Ignore
 
 guiOOoOptionsButton = Options...
 
-guiProgressWindowTitle = LanguageTool: Checking Text...
+guiProgressWindowTitle = LanguageTool\: Checking Text...
 
 guiRemoveButton=Remove
 guiReplaceWindowTitle = Replace text
@@ -165,13 +165,13 @@ no_space_before_dot = Don't put a space before the full stop
 
 pl = Polish
 
-repetition = Possible typo: you repeated a word
+repetition = Possible typo\: you repeated a word
 
 result1 = <br><b> {0}. Line {1}, column {2}</b><br>
 
 resultAreaText = Results will appear here
 
-resultTime = <br>Time: {0}ms (including {1}ms for rule matching)<br>
+resultTime = <br>Time\: {0}ms (including {1}ms for rule matching)<br>
 
 ru = Russian
 
@@ -187,7 +187,7 @@ sv = Swedish
 
 tl = Tagalog
 
-textLanguage = Text Language:
+textLanguage = Text Language\:
 
 two_commas = Two consecutive commas
 
@@ -197,8 +197,9 @@ uk = Ukrainian
 
 unpaired_brackets = Unpaired bracket or similar symbol
 
-whitespace_repetition = Possible typo: you repeated a whitespace
+whitespace_repetition = Possible typo\: you repeated a whitespace
 
 ro = Romanian
 
 zh = Chinese
+
